update jobid && title

--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文本审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文本审核.md
@@ -87,7 +87,7 @@ Conf 中的具体数据描述如下：
 
 #### 返回结果示例
 
-#### 示例一：文本内容审核
+#### 示例一：审核文本内容
 ```php
 //当选择 Content 时，审核结果为同步返回，可通过 响应体 查看返回结果。
 GuzzleHttp\Command\Result Object
@@ -159,7 +159,7 @@ GuzzleHttp\Command\Result Object
 )
 ```
 
-#### 示例二：存储桶文本文件审核
+#### 示例二：审核存储桶路径下的文本文件
 ```php
 //当选择 Object 时，审核结果为异步返回，可通过 查询文本审核任务接口获取返回结果。
 GuzzleHttp\Command\Result Object
@@ -198,8 +198,8 @@ public Guzzle\Service\Resource\Model getDetectTextResult(array $args = array());
 ```php
 try {
     $result = $cosClient->getDetectTextResult(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
-        'Key' => 'exampleobject', // JobId
+        'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
+        'Key' => 'examplejobid', // JobId
     ));
     // 请求成功
     print_r($result);
