--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/音频审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/音频审核.md
@@ -101,7 +101,7 @@ public Guzzle\Service\Resource\Model getDetectAudioResult(array $args = array())
 try {
     $result = $cosClient->getDetectAudioResult(array(
         'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
-        'Key' => 'exampleobject', // JobId
+        'Key' => 'examplejobid', // JobId
     ));
     // 请求成功
     print_r($result);
