--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/App SDK 接入/接入人脸核身/PC端H5接入/合作方后台上送身份信息.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/App SDK 接入/接入人脸核身/PC端H5接入/合作方后台上送身份信息.md
@@ -14,7 +14,7 @@
 | idNo | 证件号码 | - |
 | userId | 用户 ID ，用户的唯一标识（不要带有特殊字符） | 合作方自行分配 |
 | version | 1.0.0 | - |
-| api ticket | 合作伙伴服务端缓存的 tikcet，注意是 SIGN 类型 | 获取方式见 [SIGN ticket 获取](https://cloud.tencent.com/document/product/1007/37305) |
+| api ticket | 合作伙伴服务端缓存的 ticket，注意是 SIGN 类型 | 获取方式见 [SIGN ticket 获取](https://cloud.tencent.com/document/product/1007/37305) |
 
 ### 基本步骤
 1. 将 wbappid、orderNo、name、idNo、userId、version、api ticket（SIGN 类型）共7个参数的值进行字典序排序。
@@ -35,7 +35,7 @@
 | idNo | 4300000000000 |
 | userId | userID19959248596551 |
 | version | 1.0.0 |
-| ticket | duSz9ptwyW1Xn7r6gYItxz3feMdJ8Na5x7JZuoxurE7RcI5TdwCE4KT2eEeNNDoe |
+| api ticket | duSz9ptwyW1Xn7r6gYItxz3feMdJ8Na5x7JZuoxurE7RcI5TdwCE4KT2eEeNNDoe |
 
 **字典排序后的参数为：**
 
@@ -89,10 +89,14 @@ EE57F7C1EDDE7B6BB0DFB54CD902836B8EB0575B
 | code     | String | 0：成功 <br>非0：失败 <br>详情请参见 [SaaS 服务错误码](https://cloud.tencent.com/document/product/1007/47912) |
 | msg      | String | 请求结果描述                                                 |
 | bizSeqNo | String | 请求业务流水号                                               |
-| orderNo  | String | 订单编号                                                     |
-| h5faceId | String | 此次刷脸用户标识                                             |
 |transactionTime| String| 接口请求的时间|
-|optimalDomain | String	| 启动 H5 人脸核身步骤中调用 login 接口使用的域名 |
+|result| Object| 业务响应参数|
+| +bizSeqNo | String | 请求业务流水号                                               |
+|+transactionTime| String| 接口请求的时间|
+| +orderNo  | String | 订单编号                                                     |
+| +h5faceId | String | 此次刷脸用户标识                                             |
+|+optimalDomain | String	| 启动 H5 人脸核身步骤中调用 login 接口使用的域名 |
+|+success | boolean	| false 无意义，合作伙伴可忽略，无需处理 |
 
 **响应示例：**	
 ```
