--- a/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
+++ b/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
@@ -12,23 +12,23 @@
 ## 配置指南
 ### 查看配置
 登录 [CDN 控制台](https://console.cloud.tencent.com/cdn)，在菜单栏里选择【域名管理】，单击域名右侧【管理】，即可进入域名配置页面，在【高级配置】中可看到带宽封顶配置，默认情况下配置为关闭状态：
-![](https://main.qcloudimg.com/raw/c9e04c0d8d6e248bfa0e0024055ee3de.png)
+![](https://main.qcloudimg.com/raw/9dc0c4ec78f062b44dc3e8a282d6d4d9.png)
 ### 修改配置
 #### 1. 修改配置
 单击开启配置开关，进行具体配置：
-
+<img src="https://main.qcloudimg.com/raw/dd67eac00fa82db09a5a02ee549da81e.png" > </img>
 - 访问阈值：配置访问上限值。
 - 超出阈值处理：超出配置的访问上限值时：
    1. 访问回源（即请求直接返回源站）
    2. 或访问返回404（即关闭CDN服务）。您可后续在域名管理页面重新上线域名，恢复CDN服务。
     注：对源站类型为 COS 源域名，仅支持访问返回404（即关闭CDN服务）
 - 告警阈值：当 访问带宽/访问阈值 的比值超出配置的百分比时（仅可填写10的倍数，10% - 90%），CDN将推送告警消息。默认未开启。
-
+![](https://main.qcloudimg.com/raw/8f23fb705c5869d48a088fc883696acb.png)
 >! 
 >- 检测到域名带宽超出阈值后，访问回源或访问返回404配置均需要全网节点逐步下发生效，因此会有一定的生效延迟。
 >- 若已开启告警阈值：因扫描粒度为5min，若短时间内用量剧增或百分比设置的数值较大，可能上一次扫描还未触发百分比告警的阈值，下一次扫描直接达到了访问阈值。此场景下 CDN 会依次发送百分比告警和访问阈值告警两个通知消息。
 
-<img src="https://main.qcloudimg.com/raw/d0978322fe6d6c18d0bd9b1f496fcfbf.png" width=60%> </img>
+
 
 #### 2. 关闭配置
 您可以通过带宽封顶开关，一键关闭配置，开关为关闭状态时，即便下方存在已有配置，仍不会现网生效，下次单击开启时，会先行进行配置的二次确认，不会立即发布至全网生效：
@@ -36,15 +36,14 @@
 
 #### 3. 区域特殊配置
 若您的加速域名服务区域为全球加速，想针对境内、境外加速区域进行不同的带宽封顶配置，可单击配置下方的【添加特殊配置】进行设置：
-![](https://main.qcloudimg.com/raw/ee63c14e4bcbd38899e8d9c063499db9.png)
-
+![](https://main.qcloudimg.com/raw/6ebcf5e55f973f11db297a29f9010348.png)
 >!
 >- 区域特殊配置添加后，暂时无法直接删除，您可以通过关闭配置来禁用。
 
 
 ## 配置示例
 若加速域名`cloud.tencent.com`的带宽封顶配置如下：
-![](https://main.qcloudimg.com/raw/8e4c74626c0b0f16c786f84944c11429.png)
+![](https://main.qcloudimg.com/raw/4336ee899070964cf0a437427197d25a.png)
 则实际访问情况如下：
 若中国境内带宽到达 11Gbps、境外带宽到达 4Gbps 时，则所有境内用户的访问会直接返回404，境外用户仍可享受加速服务。
 
