--- a/product/视频服务/实时音视频/常见问题/其他问题.md
+++ b/product/视频服务/实时音视频/常见问题/其他问题.md
@@ -227,5 +227,5 @@ TRTC 支持手动录制，具体操作办法如下：
 更多详细操作，请参见  [跑通直播模式(Windows)](https://cloud.tencent.com/document/product/647/35430) 。
 
 [](id:que41)
-### 实时音视频有 Linux SDK 吗？
+### TRTC 有 Linux SDK 吗？
 Linux SDK 暂未完全开放，若您需咨询或使用相关服务，请填写 [Linux SDK 问卷](https://cloud.tencent.com/apply/p/bmpdfyvtui)。我们会在2个-3个工作日内完成评估并反馈结果。
