--- a/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
+++ b/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
@@ -37,7 +37,7 @@
 - 超出阈值：
   - 访问回源，即请求直接返回源站
   - 访问404，该配置会直接关闭CDN服务。您可后续在域名管理页面重新上线域名，恢复CDN服务。
-    **注：**对源站类型为COS源/第三方对象存储，仅支持访问返回404（即关闭CDN服务）
+    **注：**对源站类型为COS源/第三方对象存储，仅支持访问返回404（即关闭CDN服务）。
 - 告警阈值：
   当 访问带宽（流量）/访问阈值 的比值超出配置的百分比时（仅可填写10的倍数，10% - 90%），CDN将推送告警消息。
   ![](https://main.qcloudimg.com/raw/8f23fb705c5869d48a088fc883696acb.png)
@@ -53,7 +53,7 @@
 
 #### 3.区域特殊配置
 
-若您的加速域名服务区域为全球加速，想针对境内、境外加速区域进行不同的用量封顶配置，可单击配置下方的【添加特殊配置】进行设置：
+若您的加速域名服务区域为全球加速，想针对境内、境外加速区域进行不同的用量封顶配置，可单击配置下方的**添加特殊配置**进行设置：
 ![](https://main.qcloudimg.com/raw/6ebcf5e55f973f11db297a29f9010348.png)
 
 >! 区域特殊配置添加后，暂时无法直接删除，您可以通过关闭配置来禁用。
