--- a/product/监控与管理/混沌演练平台/快速入门.md
+++ b/product/监控与管理/混沌演练平台/快速入门.md
@@ -1,6 +1,9 @@
 混沌演练平台提供控制台方式来支持您自主自助对服务器、云服务进行故障演练，目前平台已支持演练动作和演练管理功能。本文以一个演练任务从创建、执行和结束全流程为例，快速开始使用混沌演练平台。
 
-## 步骤1：创建演练[](id:step1)
+## 步骤1：登录注册[](id:step1)
+登录 [腾讯云官网](https://cloud.tencent.com/login)。如果没有账号，请参见 [账号注册](https://cloud.tencent.com/document/product/378/17985) 教程 。
+
+## 步骤2：创建演练[](id:step2)
 1. 登录 [混沌演练平台控制台](https://console.cloud.tencent.com/product/cfg)，进入**演练管理**页面，单击**新增演练**。
 2. 在弹出框中选择**创建空白场景**或**推荐的经验库模版**。
 3. 跳转到新增演练界面，如果从经验库模版创建则经验信息会自动填充。新增演练需填写基本信息、演练对象配置、全局配置3方面信息：
@@ -85,8 +88,8 @@
 </table>	
 4. 填写完以上信息，单击**提交**则成功创建混沌演练。
 
-## 步骤2：执行演练
+## 步骤3：执行演练[](id:step3)
 在演练列表中找到 [步骤1](#step1) 中新创建的演练，单击**详情**，跳转演练详情界面，单击**执行演练**。在执行过程中，观察演练监控指标及护栏策略指标，判断是否需要暂停或终止演练。
 
-## 步骤3：结束演练
+## 步骤4：结束演练[](id:step4)
 所有动作执行结束后，单击**记录演练结论**，查看所记录的演练是否符合预期。
