--- a/product/监控与管理/混沌演练平台/产品简介/产品概述.md
+++ b/product/监控与管理/混沌演练平台/产品简介/产品概述.md
@@ -1,4 +1,4 @@
-混沌演练平台是自动化故障注入工具平台，支持观测指标可视化，安全护栏等功能，帮助用户及时发现业务潜在风险和验证高可用预案有效性。
+混沌演练平台（Chaotic Fault Generator）提供便捷、灵活、安全的故障演习服务，除自动化故障注入外，还提供了观测指标，安全护栏等核心功能，致力帮助用户及时发现业务潜在风险、验证高可用预案有效性，从而提高其业务及系统的可用性和韧性。
 混沌演练平台主要有以下功能和特点：
 - 演习方案设计，通过组合编排不同的注入动作，实现业务需要的演习内容，且方案可作为经验库沉淀便于后续复用。
 - 支持组件对象类型的故障注入（如 Mysql），用户无需关注和担心底层资源操作的问题。且 PaaS 和 SaaS 对象类型会持续丰富。
