--- a/product/监控与管理/云审计/常见问题.md
+++ b/product/监控与管理/云审计/常见问题.md
@@ -33,7 +33,8 @@ CloudAudit 可通过记录账号上执行的操作来提供用户活动的可见
 
 ### CloudAudit 支持哪些服务？
 
-CloudAudit 可支持以下服务：云服务器 CVM ，访问管理 CAM 和账号 Account。
+CloudAudit 目前已支持多数腾讯云产品，您可在 [操作记录](https://console.cloud.tencent.com/cloudaudit) 页面的“资源事件名称”下拉列表中查看。
+ 
 
 ### 一个操作记录中包含了哪些信息？
 
