--- a/product/计算与网络/网络流日志/快速入门.md
+++ b/product/计算与网络/网络流日志/快速入门.md
@@ -10,8 +10,8 @@
 ![](https://main.qcloudimg.com/raw/67866dca42fa8356b23eaf60e8bf876b.png)
 
 ## 操作步骤
-1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc/vpc?rid=1)，在左侧导航栏选择【诊断工具】>【网络流日志】。
-2. 在“流日志”页面左上角选择地域，然后单击【+新建】，并在“创建流日志”对话框中配置以下参数：
+1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc/vpc?rid=1)，在左侧导航栏选择**诊断工具** > **网络流日志**。
+2. 在“流日志”页面左上角选择地域，然后单击**+新建**，并在“创建流日志”对话框中配置以下参数：
 ![](https://main.qcloudimg.com/raw/7357cc77440d826478bd35716283eddb.png)
 <table>
 <tr>
@@ -55,12 +55,12 @@
 <td>您可以新建（直接输入）或选择已有标签值，也可以为空值。</td>
 </tr>
 </table>
-3. 单击【确定】。
+3. 单击**确定**。
 >!
  - 首次创建流日志时，创建完成后等待15分钟后（10分钟捕获窗口，5分钟数据推送时间），方可在日志服务中查看流日志。
  - 流日志本身不会产生费用，数据存储在日志服务中，将按标准收费。
 >
 
 ## 结果验证
-约 15 分钟后，在“流日志”页面目标流日志右侧“操作”列单击【查看】。在“检索分析”页面选择操作时间，并输入服务器 B 的 IP 进行关键词检索，可以得到以下结果，与服务器 A 中回执一致。
+约 15 分钟后，在“流日志”页面目标流日志右侧“操作”列单击**查看**。在“检索分析”页面选择操作时间，并输入服务器 B 的 IP 进行关键词检索，可以得到以下结果，与服务器 A 中回执一致。
 ![](https://main.qcloudimg.com/raw/26fd7de53cea591b26169319ab31834d.png)
