--- a/product/数据库/云数据库 CynosDB/TDSQL-C for MySQL 内核功能/内核版本更新动态.md
+++ b/product/数据库/云数据库 CynosDB/TDSQL-C for MySQL 内核功能/内核版本更新动态.md
@@ -1,5 +1,5 @@
 
-本文为您介绍 TDSQL-C 内核版本更新动态，如需升级，请参见 [升级内核小版本]()。
+本文为您介绍 TDSQL-C 内核版本更新动态，如需升级，请参见 [升级内核小版本](https://cloud.tencent.com/document/product/1003/61541)。
 
 ## TDSQL-C For MySQL 5.7
 ### 2.0.14
