--- a/product/存储与CDN/内容分发网络/快速入门/接入域名（新）.md
+++ b/product/存储与CDN/内容分发网络/快速入门/接入域名（新）.md
@@ -31,7 +31,7 @@ table th:nth-of-type(2){ width:82%; }
 
 | 配置项        | 配置说明                                                     |
 | ------------- | ------------------------------------------------------------ |
-| 域名          | 1. 域名长度不超过81个字符。<br/>2. 域名已经在工信部进行过备案。<br/>3.域名为 a.test.com、a.b.test.com 等形式子域名或 \*.test.com、\*.a.test.com 形式泛域名。<br/>4. 当接入域名为泛域名，或已被其他用户接入，或首次接入一个新域名时，需要进行 [域名归属权验证](#m1)。<br/><br/><strong>注意事项：</strong><br/>1. 接入泛域名后，不支持其子域名或二级泛域名在其他账号接入。<br/>2. 不支持 `*.test.com` 与 `*.a.test.com` 同时接入。</strong><br/>3. 目前已白名单支持包含下划线的域名以及中文域名转 punycode 码接入，您可以 <a href="https://cloud.tencent.com/apply/p/imfbrybsp6a">提交申请表</a> 申请开白。<br/>　• 境内中文域名需先以中文形式进行相关备案。<br/>　• 中文域名，例如“中文.域名”，开白之后，可通过第三方工具转换成为 “xn--fiq228c.xn--eqrt2g” 后接入。<br/>　• 含下划线域名，例如 “test_qq.tencent.cloud”，开白之后可直接添加。<br/>4. 若域名为恶意域名或高风险域名，不可接入。详细说明请见 [使用限制](https://cloud.tencent.com/document/product/228/37848)。 |
+| 域名          | 1. 域名长度不超过81个字符。<br/>2. 域名已经在工信部进行过备案。<br/>3.域名为 a.test.com、a.b.test.com 等形式子域名或 \*.test.com、\*.a.test.com 形式泛域名。<br/>4. 当接入域名为泛域名，或已被其他用户接入，或首次接入一个新域名时，需要进行 [域名归属权验证](#m1)。<br/><br/><strong>注意事项：</strong><br/>1. 接入泛域名后，不支持其子域名或二级泛域名在其他账号接入。<br/>2. 不支持 `*.test.com` 与 `*.a.test.com` 同时接入。</strong><br/>3. 目前已支持包含下划线域名以及中文域名转 punycode 码接入。<br/>　• 境内中文域名需先以中文形式进行相关备案。<br/>　• 中文域名，例如“中文.域名”，可通过第三方工具转换成 “xn--fiq228c.xn--eqrt2g” 接入。<br/>　• 含下划线域名，例如 “test_qq.tencent.cloud”，可直接添加。<br/>4. 若域名为恶意域名或高风险域名，不可接入。详细说明请见 [使用限制](https://cloud.tencent.com/document/product/228/37848)。 |
 | 所属项目      | 项目为腾讯云所有云产品共享资源集概念，[项目管理](https://console.cloud.tencent.com/project) 中可进行项目相关操作。 |
 | 加速区域      | 中国境内：全球用户访问均会调度至中国境内加速节点进行服务。<br/>中国境外：全球用户访问均会调度至中国境外的加速节点进行服务。<br/>全球：全球用户访问将会择优调度至最近节点进行服务。<br/><br/><strong>注意事项：</strong><br/>中国境内与中国境外加速服务分开计费，计费策略 [单击查看](https://cloud.tencent.com/document/product/228/2949)。 |
 | 业务类型      | 腾讯云 CDN/ECDN 针对不同业务类型进行了针对性的加速性能优化，<br/>建议选择与自身业务更加贴近的业务类型，来获取更优质的加速效果。<br/><br/>静态加速：适用于电商类、网站类、游戏图片类小型资源加速场景。<br/>下载加速：适用于游戏安装包、音视频源文件下载、手机固件分发等下载场景。<br/>流媒体点播加速：适用于在线教育、在线视频点播等场景。<br/><br/>动静加速：适用于各类网站首页等动静态数据相融合的业务场景。<br/>动态加速：适用于账号登录、订单交易、API 调用、实时查询等场景。 <br/><br/><strong>注意事项：</strong><br/>存量仅开通了 CDN 服务的用户，在第一次添加动静加速/动态加速域名时，系统将自动为您开通 ECDN 服务，ECDN 域名产生的费用将按照 [ECDN 的计费方式](https://cloud.tencent.com/document/product/570/10979) 体现在您的账单中。 |
