--- a/product/存储与CDN/内容分发网络/购买指导/计费说明.md
+++ b/product/存储与CDN/内容分发网络/购买指导/计费说明.md
@@ -139,7 +139,7 @@
 > - 各 CDN 节点会实时记录流量数据，上报至计算中心，汇总为域名总流量数据。带宽计费时，使用每5分钟粒度数据进行结算，即相应的带宽值 = 5分钟粒度总流量 / 300秒。例如：5分钟内产生的总流量为30MB，根据换算规则：1MB = 8Mb，即相应的带宽为<nobr>（30 * 8）/ 300 = 0.8Mbps</nobr>。
 > - 进制换算规则：1GB = 1000MB、1 MB= 1000 KB; 1Gbps = 1000Mbps、1Mbps = 1000Kbps。
 
-### 增值服务计费方式说明
+### 增值服务计费方式说明[](id:m8)
 
 |计费模式	|描述	|付费方式	|计费规则|	计费详情|
 |-------|-------|------|------|-----|
