--- a/product/存储与CDN/内容分发网络/购买指导/计费说明.md
+++ b/product/存储与CDN/内容分发网络/购买指导/计费说明.md
@@ -1,3 +1,18 @@
+<blockquote class="d-mod-alarm">
+<div class="d-mod-title d-alarm-title">
+<i class="d-icon-alarm"></i>公告：
+</div>
+<p>QUIC 访问属于增值服务，目前腾讯云 CDN 正在免费内测中。<strong>后续进行线上计费时，我们会提前推送消息给您，请您关注确认。</strong><br><br>
+
+收到计费提示消息后，您仍可管理 QUIC 访问功能：
+
+- 若您通过官网内测申请使用：请自行于控制台管理 QUIC 访问功能。
+- 若您通过后端配置开启了 QUIC：请联系您的售后人员。
+
+QUIC 访问增值服务将按 QUIC 请求数次数计费，按量后付费，详细说明请见 <a href="#m8">计费说明</a>。</p>
+</blockquote>
+
+
 自2020年12月7日21:30起，开通 CDN 时计费方式仅支持【按流量小时计费】，开通后不可变更计费方式。
 按流量小时计费的价格阶梯同 [流量按量计费](#m2)，仅计费周期变更为按小时。
 
