--- a/product/存储与CDN/内容分发网络/购买指导/计费说明.md
+++ b/product/存储与CDN/内容分发网络/购买指导/计费说明.md
@@ -158,7 +158,7 @@ QUIC 访问增值服务将按 QUIC 请求数次数计费，按量后付费，详
 
 |计费模式	|描述	|付费方式	|计费规则|	计费详情|
 |-------|-------|------|------|-----|
-|QUIC 请求数计费|	若您已使用 QUIC 访问功能，将按 QUIC 请求数次数计费。	|后付费月度结算</br>**注**：月结客户|无阶梯一口价	|参见 [计费详情](#m7)|
+|QUIC 请求数计费|	若您已使用 [QUIC 访问功能](https://cloud.tencent.com/document/product/228/51800)，将按 QUIC 请求数次数计费。	|后付费月度结算</br>|无阶梯一口价	|参见 [计费详情](#m7)|
 
 
 
@@ -483,7 +483,7 @@ CDN 流量计费采用**月度阶梯累进**模式，阶梯价格如下：
 3. 假设客户1月份有14天有效天，则计费带宽为这14天有效天的所有统计点14 \* 288个，去掉最高的5%的点，剩余统计点中最高的为 Max95，Max95 即为计费带宽，1月的费用为：Max95 \* P \* 14 / 31。
 
 ### QUIC 请求数计费[](id:m7)	
-若您已使用 QUIC 访问功能，将按 QUIC 请求数次数计费：按量后付费，月度结算。
+若您已使用 [QUIC 访问功能](https://cloud.tencent.com/document/product/228/51800)，将按 QUIC 请求数次数计费：按量后付费，月度结算。
 
 |计费项|	价格（元/万次）|	计费方式|	计费周期|
 |----|----|---|----|
