--- a/product/存储与CDN/内容分发网络/购买指导/计费说明.md
+++ b/product/存储与CDN/内容分发网络/购买指导/计费说明.md
@@ -2,13 +2,12 @@
 <div class="d-mod-title d-alarm-title">
 <i class="d-icon-alarm"></i>公告：
 </div>
-<p>QUIC 访问属于增值服务，目前腾讯云 CDN 正在免费内测中。<strong>后续进行线上计费时，我们会提前推送消息给您，请您关注确认。</strong><br><br>
-
-收到计费提示消息后，您仍可管理 QUIC 访问功能：
-
-- 若您通过官网内测申请使用：请自行于控制台管理 QUIC 访问功能。
-- 若您通过后端配置开启了 QUIC：请联系您的售后人员。
-
+<p><ul><li>QUIC 访问属于增值服务，目前腾讯云 CDN 正在免费内测中。<strong>后续进行线上计费时，我们会提前推送消息给您，请您关注确认。</strong></li>
+<li>收到计费提示消息后，您仍可管理 QUIC 访问功能：</li>
+<ul>
+<li> 若您通过官网内测申请使用：请自行于控制台管理 QUIC 访问功能。</li>
+<li> 若您通过后端配置开启了 QUIC：请联系您的售后人员。</li>
+</ul></ul>
 QUIC 访问增值服务将按 QUIC 请求数次数计费，按量后付费，详细说明请见 <a href="#m8">计费说明</a>。</p>
 </blockquote>
 
