--- a/product/存储与CDN/内容分发网络/购买指导/计费说明.md
+++ b/product/存储与CDN/内容分发网络/购买指导/计费说明.md
@@ -8,7 +8,7 @@
 <li> 若您通过官网内测申请使用：请自行于控制台管理 QUIC 访问功能。</li>
 <li> 若您通过后端配置开启了 QUIC：请联系您的售后人员。</li>
 </ul></ul>
-QUIC 访问增值服务将按 QUIC 请求数次数计费，按量后付费，详细说明请见 <a href="#m8">计费说明</a>。</p>
+QUIC 访问增值服务将按 QUIC 请求数次数计费，按量后付费，详细说明请见 <a href="#m8">增值服务计费方式说明</a>。</p>
 </blockquote>
 
 
