--- a/product/视频服务/直播/产品介绍/应用场景.md
+++ b/product/视频服务/直播/产品介绍/应用场景.md
@@ -18,5 +18,5 @@
 ![img](https://main.qcloudimg.com/raw/a85811237c05fcb3b4f25d99ca0361d3.png)
 
 ## 电商直播
-腾讯云标准直播助力电商平台发展，使商家更加全面地传递了商品信息，促进用户的有效决策，降低营销成本，增加成交量。
+腾讯云直播助力电商平台发展，使商家更加全面地传递了商品信息，促进用户的有效决策，降低营销成本，增加成交量。
 ![img](https://main.qcloudimg.com/raw/9cffabd7c4d5278b2a68e7c500c6e2e6.png)
