--- a/product/视频服务/视立方·音视频终端引擎/9-常见问题/7-实时互动相关问题/小程序端相关.md
+++ b/product/视频服务/视立方·音视频终端引擎/9-常见问题/7-实时互动相关问题/小程序端相关.md
@@ -144,9 +144,40 @@ pusherInstance 中提供了 playBGM 的方法，具体请参见 [pusherInstance]
 
 [pusherAttributes](https://cloud.tencent.com/document/product/647/17018#pusherAttributes) 中也提供了直接关闭设备的属性：enableMic、enableCamera，当这两个属性的变化时，远端会收到状态变化事件，具体现象可见下表：
 
-| 状态变化调用 | enableMic 当前值 | enableCamera 当前值 | 小程序现象 | web端现象 | 
-| :-----| :---- | :---- | :---- | :---- |
-| enableMic: false | true | true | REMOTE_AUDIO_REMOVE 事件 | 收到 PLAYER_STATE_CHANGED 中 mute audio 事件 |
-|  | true | false | REMOTE_AUDIO_REMOVE 事件 | 收到 stream-removed 事件 |
-| enableCamera: false | true | true | REMOTE_VIDEO_REMOVE 事件 | 收到 PLAYER_STATE_CHANGED 中 mute video 事件 |
-|  | false | true | REMOTE_VIDEO_REMOVE 事件 | 收到 stream-removed 事件 |
+<table>
+<thead>
+<tr>
+<th>状态变化调用</th>
+<th>enableMic 当前值</th>
+<th>enableCamera 当前值</th>
+<th>小程序现象</th>
+<th>web端现象</th>
+</tr>
+</thead>
+<tbody><tr>
+<td rowspan=2>enableMic: false</td>
+<td>true</td>
+<td>true</td>
+<td>REMOTE_AUDIO_REMOVE 事件</td>
+<td>收到 PLAYER_STATE_CHANGED 中 mute audio 事件</td>
+</tr>
+<tr>
+<td>true</td>
+<td>false</td>
+<td>REMOTE_AUDIO_REMOVE 事件</td>
+<td>收到 stream-removed 事件</td>
+</tr>
+<tr>
+<td rowspan=2>enableCamera: false</td>
+<td>true</td>
+<td>true</td>
+<td>REMOTE_VIDEO_REMOVE 事件</td>
+<td>收到 PLAYER_STATE_CHANGED 中 mute video 事件</td>
+</tr>
+<tr>
+<td>false</td>
+<td>true</td>
+<td>REMOTE_VIDEO_REMOVE 事件</td>
+<td>收到 stream-removed 事件</td>
+</tr>
+</tbody></table>
