完善 SPLIT_INDEX 的说明

--- a/product/大数据与AI/流计算服务/SQL 手册/运算符和内置函数/字符串操作函数.md
+++ b/product/大数据与AI/流计算服务/SQL 手册/运算符和内置函数/字符串操作函数.md
@@ -34,7 +34,7 @@
 | LOCATE(string1, string2[, integer])                          | 返回跳过 integer 个字符后，string1 在 string2 中首次出现的位置（**参数顺序与 INSTR 函数相反**）。如果未找到，则返回0。如果任意参数为 NULL，结果为 NULL。 |
 | REGEXP(string, regex)                                        | 如果 regex 表示的正则表达式可以匹配 string 中的字符串的任意子串，那么返回 TRUE，否则返回 FALSE。如果任意参数为 NULL，结果为 NULL。 |
 | REVERSE(string)                                              | 反转 string 字符串。如果任意参数为 NULL，结果为 NULL。       |
-| SPLIT_INDEX(string, separator, index)                        | 将 string 表示的字符串以 separator 指定的分隔符拆分，并获取第 index 项，返回值为字符串 VARCHAR 类型。其中 **index 从0开始计数**。 |
+| SPLIT_INDEX(string, separator, index)                        | 将 string 表示的字符串以 separator 指定的分隔符拆分（多个连续分隔符会当作一个），并获取第 index 项，返回值为字符串 VARCHAR 类型。其中 **index 从 0 开始计数**。如果您需要每个分隔符都单独对待，请参考使用 [ENHANCED_SPLIT_INDEX](https://github.com/tencentyun/flink-hello-world/blob/master/src/main/java/com/tencent/cloud/oceanus/udf/EnhancedSplitIndex.java) 这个自定义 UDF。 |
 | SPLIT(string, separator)                                     | 将 string 表示的字符串以 separator 指定的分隔符拆分，并返回一个 Row 类型的对象。 |
 | STR_TO_MAP(string1[, string2, string3])                      | 将 string1 字符串用 string2 提供的数据分隔符（默认为半角逗号 `,`）和 string3 提供的键值间分隔符（默认为半角等号 `=`）进行拆分，结果为键值对 `MAP<string, string>` 类型。例如 STR_TO_MAP('k1=v1,k2=v2,k3=v3') 返回键值对（非字符串）{'k1': 'v1', 'k2': 'v2', 'k3': 'v3'}。 |
 | SUBSTR(string[, pos[, length]])                              | 返回 string 字符串从 pos 位置开始，长度为 length 的子串。如果不提供 length，则默认到该字符串尾部。 |
