--- a/product/监控与管理/混沌演练平台/快速入门.md
+++ b/product/监控与管理/混沌演练平台/快速入门.md
@@ -10,7 +10,7 @@
 	- **基本信息页面**
 <table>
 <tr>
-<th>信息项</th>
+<th style="width:16%">信息项</th>
 <th>说明</th>
 </tr>
 <tr>
@@ -34,7 +34,7 @@
 	一次演练任务支持多个动作组，每组动作组包括6类信息，具体操作如下：
 <table>
 <tr>
-<th>信息项</th>
+<th style="width:16%">信息项</th>
 <th>说明</th>
 </tr>
 <tr>
@@ -66,7 +66,7 @@
 	依次按照界面提示配置演练编排、监控指标、护栏策略、演练暂停时长4类信息，具体操作如下：
 <table>
 <tr>
-<th>信息项</th>
+<th style="width:16%">信息项</th>
 <th>说明</th>
 </tr>
 <tr>
