--- a/product/安全服务/威胁情报云查服务/产品简介/快速入门.md
+++ b/product/安全服务/威胁情报云查服务/产品简介/快速入门.md
@@ -1,3 +1,5 @@
+腾讯云威胁情报云查是一款纯 SaaS 模式服务，通过 API 接口可以查询 IP 地址、域名、文件哈希等对象的威胁情报信息和相关基础信息。
+
 ### 步骤1：登录控制台
 注册并通过实名认证后，您可以登录腾讯云控制台。如果没有账号，请参考 [账号注册教程](https://cloud.tencent.com/document/product/378/17985)。
 
@@ -12,9 +14,3 @@
 
 ### 步骤5：查看调用
 您可以登录 [威胁情报云查控制台](https://console.cloud.tencent.com/tics)，查看威胁情报云查的各服务调用情况。
-
-
-
-
-
-
