--- a/product/企业协同/腾讯会议/产品动态.md
+++ b/product/企业协同/腾讯会议/产品动态.md
@@ -8,6 +8,14 @@
 	<th style="width: 25%;"><center>更新时间</center></th>
 	</tr>
 		<tr>
+	<td><center> V2.18.0</center></td>
+	<td>
+1. 历史会议记录支持多端同步：历史会议记录支持云端漫游，会议记录随时查。<br>
+2. 云会议支持会前报名：预定会议时可开启会前报名，方便留存参会者信息，高效推进转化沉淀。
+</td>
+<td><center>2021-09-13</center></td>
+</tr>
+		<tr>
 	<td><center> V2.17.0</center></td>
 	<td>
 1. PowerPoint 支持多批注跟随翻页：共享屏幕时，批注支持跟随 PowerPoint 放映模式翻页，互动批注动态切换，回顾保存更便捷。<br>
@@ -191,6 +199,14 @@
 	<th style="width: 50%;"><center>更新内容</center></th>
 	<th style="width: 25%;"><center>更新时间</center></th>
 	</tr>
+		<tr>
+	<td><center> V2.18.0</center></td>
+	<td>
+1. 历史会议记录支持多端同步：历史会议记录支持云端漫游，会议记录随时查。<br>
+2. 云会议支持会前报名：预定会议时可开启会前报名，方便留存参会者信息，高效推进转化沉淀。
+</td>
+<td><center>2021-09-13</center></td>
+</tr>
 		<tr>
 	<td><center> V2.17.0</center></td>
 	<td>
@@ -379,6 +395,14 @@
 	<th style="width: 25%;"><center>更新时间</center></th>
 </tr>
 	<tr>
+	<td><center> V2.18.0</center></td>
+	<td>
+1. 历史会议记录支持多端同步：历史会议记录支持云端漫游，会议记录随时查。<br>
+2. 云会议支持会前报名：预定会议时可开启会前报名，方便留存参会者信息，高效推进转化沉淀。
+</td>
+<td><center>2021-09-13</center></td>
+</tr>
+	<tr>
 	<td><center> V2.17.0</center></td>
 	<td>
 1. 参会成员均可申请主持人开启云录制：所有参会成员均可向主持人申请开启云录制，云端记录重要会议内容，高效输出会议结论。<br>
@@ -537,6 +561,14 @@
 	<th style="width: 50%;"><center>更新内容</center></th>
 	<th style="width: 25%;"><center>更新时间</center></th>
 	<tr>
+	<tr>
+	<td><center> V2.18.0</center></td>
+	<td>
+1. 历史会议记录支持多端同步：历史会议记录支持云端漫游，会议记录随时查。<br>
+2. 云会议支持会前报名：预定会议时可开启会前报名，方便留存参会者信息，高效推进转化沉淀。
+</td>
+<td><center>2021-09-13</center></td>
+</tr>
 	<tr>
 	<td><center> V2.17.0</center></td>
 	<td>
