--- a/product/移动与通信/腾讯移动推送/操作指南/短信推送.md
+++ b/product/移动与通信/腾讯移动推送/操作指南/短信推送.md
@@ -13,15 +13,15 @@ App 通知栏推送的抵达率和抵达速度往往会因「App 进程不在后
 
 向注册用户和潜在客户发送通知信息，包括促销活动通知、业务推广、新产品功能、会员关怀等商品与活动等推广信息。增加 App 曝光率、提高用户活跃度。
 
-## 使用流程
+## 使用步骤
 
-### 绑定手机号码
+### 步骤1：绑定手机号码
 
 在您使用短信推送前，需先为用户绑定手机号码，TPNS SDK 提供了绑定手机号码接口。
 - Android SDK 进行手机号码的绑定，详情请参见 [添加手机号码](https://cloud.tencent.com/document/product/548/36659#.E6.B7.BB.E5.8A.A0.E6.89.8B.E6.9C.BA.E5.8F.B7)。
 - iOS SDK 进行手机号码的绑定，详情请参见 [添加手机号码](https://cloud.tencent.com/document/product/548/48835#.E6.B7.BB.E5.8A.A0.E6.89.8B.E6.9C.BA.E5.8F.B7)。
 
-### 短信平台授权
+### 步骤2：短信平台授权
 
 您需要先将腾讯云的 API 密钥保存在 TPNS 平台，推送时 TPNS 可获取其短信发送鉴权信息，配置步骤如下：
 1. 登录 [访问管理控制台](https://console.cloud.tencent.com/)。
@@ -35,13 +35,13 @@ App 通知栏推送的抵达率和抵达速度往往会因「App 进程不在后
 ![](https://main.qcloudimg.com/raw/6089b5e64c2dfda9dc25b284a6caf14c.png)
 7. 在弹出的窗口中，将 `SecretId` 和 `SecretKey` 配置到文本框中，单击**确认**保存即可。
 
-### 申请短信签名模板
+### 步骤3：申请短信签名模板
 
 一个完整的短信模板由**短信签名**和**短信正文内容**组成，您可前往 [短信控制台](https://console.cloud.tencent.com/smsv2) 创建短信签名及正文模板。
 - 发送国内用户，请参考 [国内短信签名](https://cloud.tencent.com/document/product/382/37794) 及 [国内短信正文模板](https://cloud.tencent.com/document/product/382/37795) 申请。
 - 发送国际站用户，请参考 [创建国际/港澳台短信签名](https://cloud.tencent.com/document/product/382/37799) 及 [国际/港澳台短信正文模板](https://cloud.tencent.com/document/product/382/37800) 申请。
 
-### 开始使用短信补推
+### 步骤4：开始使用短信补推
 
 目前仅支持 REST API 使用短信补推功能，您需要在调用推送接口时在消息体中补充以下字段：
 
