--- a/product/移动与通信/邮件推送/常见问题/递送相关问题.md
+++ b/product/移动与通信/邮件推送/常见问题/递送相关问题.md
@@ -4,7 +4,7 @@
 
 [](id:que2) 
 ### 邮件推送能否确保我的电子邮件成功送达？
-无论是邮件推送还是其他任何电子邮件发送服务，都无法百分之百保证每一封电子邮件的成功送达。因为邮件能否最终成功送达受很多因素的影响，例如：邮件内容、域名信誉度、打开率、用户投诉情况。这些都和邮件送达的成功率有关，请参见 [如何避免邮件被认定为垃圾邮件？](https://cloud.tencent.com/document/product/1288/55745#avoid)。
+无论是邮件推送还是其他任何电子邮件发送服务，都无法百分之百保证每一封电子邮件的成功送达。因为邮件能否最终成功送达受很多因素的影响，例如：邮件内容、域名信誉度、打开率、用户投诉情况。这些都和邮件送达的成功率有关，请参见 [如何避免邮件被认定为垃圾邮件？](https://cloud.tencent.com/document/product/1288/55745#avoid)
 
 
 [](id:que3) 
