--- a/product/数据库/数据库智能管家/产品简介/功能列表.md
+++ b/product/数据库/数据库智能管家/产品简介/功能列表.md
@@ -3,7 +3,7 @@
 >?下表中 &#10003; 表示支持，x 表示不支持，- 表示不涉及。
 
 <table>
-<thead><tr><th colspan=2>功能</th><th>云数据库 MySQL</th><th>云原生数据库 TDSQL-C for MySQL</th><th>自建数据库 MySQL</th><th>云数据库 Redis</th></tr></thead>
+<thead><tr><th colspan=2>功能</th><th>云数据库 MySQL</th><th>云原生数据库 TDSQL-C</th><th>自建数据库 MySQL</th><th>云数据库 Redis</th></tr></thead>
 <tbody>
 <tr>
 <td rowspan=2>数据库管理</td>
