--- a/product/移动与通信/腾讯移动推送/SDK 文档/iOS 接入指南/错误码.md
+++ b/product/移动与通信/腾讯移动推送/SDK 文档/iOS 接入指南/错误码.md
@@ -3,14 +3,14 @@
 
 | 错误码  |  含义                    |
 | ------ | --------------------------- | 
-| 101    | Guid请求超时           | 
+| 101    | Guid 请求超时           | 
 | 701    | SDK 异常  |
 | 801    | 长链接超时 | 
 | 901    | 长链接错误                   | 
-| 1001   | deviceToken为空，厂商token未拿到       | 
+| 1001   | deviceToken 为空，厂商 Token 未拿到       | 
 | 1101   | 设备网络错误                    | 
 | 1102   | 未注册                     | 
-| 1103   | app信息或路由配置错误                | 
+| 1103   | App 信息或路由配置错误                | 
 | 1104   | 业务接口操作类型传入错误                 | 
 | 1105   | 业务接口参数传入错误             | 
 | 1106   | 业务接口参数为空             | 
@@ -48,7 +48,7 @@
 | 1008029  |Token 校验非法|
 | 1008030  |App 未付费|
 | 1008031  |App 资源已销毁|
-| 10110008 | 查询的 Token ， 账号不存在 |
+| 10110008 | 查询的 Token， 账号不存在 |
 | 10010005 |推送目标不存在 |
 | 10010012 |  非法的推送时间，请更改推送时间。<br>定时推送时 send_time 传入的值如果是过去的时间，具体规则如下：<li>如果 \| send_time - 当前时间 \| <= 10min， 推送任务会创建，接收任务后会立即调度</li><li>如果 \| send_time - 当前时间 \| > 10min， 推送任务会被拒绝， 接口返回失败 </li> |
 | 10010018 | 重复推送 |
