--- a/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/快速入门.md
@@ -29,25 +29,19 @@
 <PackageReference Include="Tencent.QCloud.Cos.Sdk" Version="5.4.*" />
 ```
 
-如果是用 .NET CLI，请使用如下命令安装：
+如果您是使用 .NET CLI，请使用如下命令安装：
 
 ```sh
 dotnet add package Tencent.QCloud.Cos.Sdk
 ```
 
-如果是用于目标框架 .Net Framework 4.0 及以下版本的开发，
+如果您是用于目标框架 .Net Framework 4.0 及以下版本的开发，请下载 [Releases](https://github.com/tencentyun/qcloud-sdk-dotnet/releases) 并使用 COSXML-Compatible.dll 文件。
 
-请使用 [Releases](https://github.com/tencentyun/qcloud-sdk-dotnet/releases) 下载的COSXML-Compatible.dll文件
+在 Visual Studio 项目中选择**项目** > **添加引用** > **浏览** > **COSXML-Compatible.dll** 的方式添加 .NET(C#) SDK。
 
-在Visual Studio项目中选择 
+>? 关于 .NET SDK 的向下兼容特性，参见 [向下兼容指南](https://cloud.tencent.com/document/product/436/61569)。
+>
 
-```
-项目 -> 添加引用 -> 浏览 -> COSXML-Compatible.dll 的方式添加C# SDK
-```
-
-关于.NET SDK的向下兼容特性，参见 [向下兼容指南](向下兼容指南.md)
-
-您也可以在 [Releases 里面](https://github.com/tencentyun/qcloud-sdk-dotnet/releases) 手动下载我们的SDK。
 
 ## 第二步：初始化 COS 服务
 
@@ -135,7 +129,8 @@ QCloudCredentialProvider cosCredentialProvider = new CustomQCloudCredentialProvi
 
 **方式3：不变的临时密钥（不建议）**
 
-注意由于临时密钥在一定时效后过期，这种方式在过期后会请求失败，不建议使用。
+>! 由于临时密钥在一定时效后过期，这种方式在过期后会请求失败，不建议使用。
+>
 
 ```cs
 string tmpSecretId = "SECRET_ID"; //"临时密钥 SecretId";
