--- a/product/移动与通信/短信/短信（拆）/国内短信/国内短信价格/国内短信计费概述.md
+++ b/product/移动与通信/短信/短信（拆）/国内短信/国内短信价格/国内短信计费概述.md
@@ -9,9 +9,11 @@
 >!由于各地运营商政策不同，国内短信必须携带签名，签名符号为【】。
 
 ## 计费方式
-国内短信根据短信具体内容长度按条计费，采用预付费的方式，且**不支持使用通用代金券**。发送短信之前需要 [购买国内短信套餐包](https://buy.cloud.tencent.com/sms)，不同额度的套餐包收费标准不同，具体信息请参见 [国内短信价格总览](https://cloud.tencent.com/document/product/382/36132)。
->?即使您的腾讯云账户有余额，但是如果没有购买短信套餐包，发送短信仍然会失败，返回 [1031错误码](https://cloud.tencent.com/document/product/382/9559#Q3)。
-
+国内短信根据短信具体内容长度按条计费，当发送状态为”提交成功“时就会实际计费；
+国内短信采用预付费的方式，**不支持使用通用代金券**。发送短信之前需要 [购买国内短信套餐包](https://buy.cloud.tencent.com/sms)，不同额度的套餐包收费标准不同，具体信息请参见 [国内短信价格总览](https://cloud.tencent.com/document/product/382/36132)。
+>?
+>- 短信发送状态为“提交成功”，表示成功提交到运营商；发送状态为“提交成功，送达成功”，表示成功提交到运营商并成功送达收信人。可在短信控制台查看。
+>- 即使您的腾讯云账户有余额，但是如果没有购买短信套餐包，发送短信仍然会失败，[返回 1031错误码](https://cloud.tencent.com/document/product/382/9559#Q3)。
 ## 赠送额度
 对于预付费用户，企业认证用户首次开通短信服务可免费获赠1000条国内短信，个人认证用户首次开通短信服务可免费获赠100条国内短信。赠送的短信条数将在开通短信服务后5分钟左右以套餐包的形式发放至您的账户中，赠送套餐包自发放日起3个月内有效。
 对于所有用户，若单个腾讯云账号当月国内短信发送量大于100条，次月可自动获赠100条国内短信，每月1日上午8:00以“您用我奖”赠送套餐包的形式配置到您的账户中，赠送的短信当月有效无法累积下月使用，且不支持退款。
