--- a/product/安全服务/云防火墙/操作指南/访问控制/数据库白名单.md
+++ b/product/安全服务/云防火墙/操作指南/访问控制/数据库白名单.md
@@ -1,4 +1,4 @@
-数据库白名单是基于 NAT 防火墙的针对数据库的访问控制表，可以根据 IP、地理位置等对流量进行过滤。
+数据库白名单是基于 NAT 防火墙针对数据库的访问控制表，可以根据 IP、地理位置等对流量进行过滤。
 
 ## 操作步骤
 1. 登录 [云防火墙控制台](https://console.cloud.tencent.com/cfw/ac/internet)，在左侧导航栏中，选择【访问控制】>【数据库白名单】，进入数据库白名单页面。
