--- a/product/移动与通信/短信/常见问题/费用相关问题.md
+++ b/product/移动与通信/短信/常见问题/费用相关问题.md
@@ -54,3 +54,8 @@
 套餐包基于腾讯云账号使用，支持用于发送国内文本短信的所有类型，个人认证转企业认证后可用于发送营销短信。
 
 如有任何疑问，请联系 [腾讯云短信小助手](https://tccc.qcloud.com/web/im/index.html#/chat?webAppId=8fa15978f85cb41f7e2ea36920cb3ae1&title=Sms)，将有专人为您解答。
+
+### 国内短信、国际/港澳台短信计费标准是什么？[](id:Q14)
+国内短信、国际/港澳台短信发送状态为“提交成功”即计费；
+
+如果客户有拒收或者空号的情况导致的短信发送失败，需核实短信是否已成功提交到了运营商。若是已成功提交运营商（发送状态为“提交成功”），即会收取相应的费用。 可以在**控制台**-**统计分析**-**发送记录**中查看，如果显示是提交成功，就计费，如果显示提交失败，则不计费。
