--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/旅游门户小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/旅游门户小程序模板.md
@@ -53,7 +53,7 @@
 ## 使用流程
 ### 步骤1：购买和试用小程序
 
-进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购汽车服务小程序，单击**试用7天**或**立即购买**下单。
+进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购旅游门户小程序，单击**试用7天**或**立即购买**下单。
 ![](https://main.qcloudimg.com/raw/5a2b4419b1fea12be45c1fc4968d78eb.jpeg)
 
 ### 步骤2：安装模版
