--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/美容美发小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/美容美发小程序模板.md
@@ -1,137 +1,145 @@
 ## 模板简介
-
 本模板是应用于美容美发行业的小程序模板，包含了产品中心，产品服务，企业资讯，关于我们，在线留言等多种功能。
 
-### 功能模块
+## 功能模块
 
-| 模块         | 功能名称                                | 详细功能清单                               |
-| ------------ | --------------------------------------- | ------------------------------------------ |
-| 管理后台     | 关于我们                                | 店铺信息新增/查看/编辑/删除                |
-| 产品中心信息 | 产品中心信息新增/查看/编辑/删除         |                                            |
-| 企业资讯     | 企业资讯新增/查看/编辑/删除企业资讯详情 |                                            |
-| 成功案例     | 成功案例新增/查看/编辑/删除成功案例详情 |                                            |
-| 咨询         | 咨询详情                                |                                            |
-| 产品         | 产品新增/查看/编辑/删除产品详情         |                                            |
-| 小程序端     | 首页                                    | 轮播图产品中心信息成功案例品牌介绍企业资讯 |
-| 产品服务     | 产品列表产品详情                        |                                            |
-| 企业资讯     | 资讯列表资讯详情                        |                                            |
-| 关于我们     | 介绍，联系地址、方式                    |                                            |
+<table>
+   <tr>
+      <th>模块</th>
+			<th>功能名称</th>
+			<th>详细功能清单</th>
+   </tr>
+   <tr>
+      <td rowspan="6">管理后台</td>
+		 <td>关于我们</td>
+      <td>店铺信息新增/查看/编辑/删除</td>  
+   </tr>
+	 <tr>
+      <td>产品中心信息</td>
+      <td>产品中心信息新增/查看/编辑/删除</td>
+   </tr>
+	 	<tr>
+      <td>企业资讯</td>
+      <td><li>企业资讯新增/查看/编辑/删除</li><li>资讯详情</li></td>
+   </tr>
+	 <tr>
+      <td>成功案例</td>
+      <td><li>成功案例新增/查看/编辑/删除</li><li>案例详情</li></td>
+   </tr>	 
+	 	<tr>
+      <td>咨询</td>
+      <td>咨询详情</td>
+   </tr>
+	 	<tr>
+      <td>产品</td>
+      <td><li>产品新增/查看/编辑/删除</li><li>产品详情</li></td>
+   </tr>		 
+   <tr>
+      <td rowspan="4">小程序端</td>
+      <td>首页</td>
+      <td><li> 轮播图</li><li>产品中心信息</li><li>成功案例</li><li>品牌介绍</li><li>企业资讯</li></td>
+   </tr> 
+	 	<tr>
+      <td>产品服务</td>
+      <td><li> 产品列表</li><li>产品详情</li></td>
+   </tr>
+	 	<tr>
+      <td>企业资讯</td>
+      <td><li> 资讯列表</li><li>资讯详情</li></td>
+   </tr>	 
+	 	 <tr>
+      <td>关于我们</td>
+      <td>介绍，联系地址、方式</td>
+   </tr>	
+</table>
 
-### 第一步：购买和试用小程序
+## 使用流程
+### 步骤1：购买和试用小程序
 
-[微搭应用市场](https://weda.cloud.tencent.com/)选购小程序，点击【试用7天】或【立即购买】下单，下单后跳到模版管理安装模版。
+进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购美容美发小程序，单击**试用7天**或**立即购买**下单。
+![](https://main.qcloudimg.com/raw/8d9681fc6bb11a8ec5b51a5ef7d6ad89.jpeg)
 
-![img](https://main.qcloudimg.com/raw/b2d91f82750eb773ac6acb6a320938df.jpeg) 
+### 步骤2：安装模版
 
-### 第二步：安装模版
+1. 进入**模板管理** > **我的模板**页面，在模版列表单击**安装**，并填写自定义名称，单击**确认**，生成可拖拽的店铺应用。
+![](https://main.qcloudimg.com/raw/92e5cb8a112e5ae1e241e5dd5d4d0818.png) 
+2. 进入**应用管理**页面，单击相应应用模板，进入应用详情页。
+![](https://main.qcloudimg.com/raw/5ec527632d96c1dcd07511724cb6d9b5.png)    
+3. 单击**进入应用页面编辑**进行 [步骤3](#step3) 店铺装修。完成 [步骤4](#step4) 后单击**外部数据管理**进入后台管理端，后台数据管理请参见 [步骤5](#step5)。
+![](https://main.qcloudimg.com/raw/9de03d53fe6c85f65c38f383ef429ec8.png)
 
-在模版列表点击安装，并填写自定义名称，生成可拖拽的店铺应用。
+### 步骤3：小程序店铺装修[](id:step3)
 
-![img](https://main.qcloudimg.com/raw/f8baed84a2a399bacb54d62b4b188ead.jpeg) 
+您在装修过程中遇到任何问题，欢迎咨询模版提供客服。更多应用编辑器的具体说明，请参见 [应用编辑器概述](https://cloud.tencent.com/document/product/1301/53204)。
 
-模版安装的应用通过【应用管理】，进入应用详情页
+#### 首页轮播图装修
+打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行轮播图的替换。
+![](https://main.qcloudimg.com/raw/b1dcc5dec0659917076d4dbe32d8a900.jpeg)
 
-![img](https://main.qcloudimg.com/raw/12bab9b0c7e7425eccac513d60e4d2cc.jpeg) 
+#### 定制新增页面
+单击**创建新页面**进行定制新页面。
+![](https://main.qcloudimg.com/raw/18b6c19debcd8b2a234252457a7a395e.jpeg)
 
-### 第三步： 小程序店铺装修
+#### 设置页面跳转
+打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
+![](https://main.qcloudimg.com/raw/e213220cefc4cf3b4a1d496d7d0699b5.jpeg)
 
-您在装修过程中遇到任何问题，欢迎咨询模版提供客服。
-
-装修编辑器整体介绍：
-
-页面管理：可设置所需要的页面；编辑区：可将组件拖拽到编辑区，进行页面布局；预览区：页面实时预览；页面编辑：可设置页面样式
-
-![img](https://main.qcloudimg.com/raw/4702ebbe5fa270650945b44bcc7d30da.jpeg) 
-
-组件：官方组件和自定义组件；组件编辑：可设置组件数据绑定、样式、事件等   
-
-![img](https://main.qcloudimg.com/raw/44b785fad82b2b554332ff832a94f5c5.jpeg) 
-
-l 【页面管理】支持切换页面，对所有页面进行个性化装修
-
-l 【编辑区】点击选中要编辑的组件
-
-l 【预览区】可查看页面效果
-
-l 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-
-l 【组件】模版所带组件库，可用于新页面开发
-
-#### 1.  首页轮播图装修
-
-![img](https://main.qcloudimg.com/raw/f9cdf91004fad7d8fd2264ae7d89dadb.jpeg) 
-
-#### 2.  定制新增页面
-
-![img](https://main.qcloudimg.com/raw/3e76770c6f5ee81ebc441e6c26eec790.jpeg) 
-
-#### 3.  设置页面跳转![img](https://main.qcloudimg.com/raw/80dfdd3d54322ea011bc0328ce0bf960.jpeg)
-
-#### 4.  定制事件响应
+#### 定制事件响应
 
 如您需要更多操作帮助，请联系您的专属顾问。
 
-### 第四步： 创建模型应用
+### 步骤4：创建模型应用[](id:step4)
+1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
+![](https://main.qcloudimg.com/raw/67d1bd2e05e09ac751bc09b897e212d1.png)    
+2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
+![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
+3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
+![](https://main.qcloudimg.com/raw/9bc0f4bacad4777532be7fbcfd3c5cef.png)        
+4. 单击**访问链接**进入发布后的应用页面。
+![](https://main.qcloudimg.com/raw/925a43bb58074bab5bd83d210baeea74.png)        
 
-点击“创建空白应用”，选择“模型应用”，点击下一步  
 
-![img](https://main.qcloudimg.com/raw/26edb3fec7b2db7c98a199b64adca125.jpeg) 
-
-点击“进入应用页面编辑”，进入编辑页面
-
-![img](https://main.qcloudimg.com/raw/1349f581f6983b42bf2198f84d3dbc85.jpeg) 
-
-点击“发布”，选择发布方式，点击下一步  
-
-![img](https://main.qcloudimg.com/raw/da5b52481a85adbef41a534697a2e727.jpeg) 
-
-发布完成后，点击"访问链接"到管理后台
-
-![img](https://main.qcloudimg.com/raw/e33ebcd25330af9ac719bcb6dda95443.jpeg) 
-
- 
-
-### 第五步：数据管理
+### 步骤5：数据管理[](id:step5)
 
 在发布后的企业管理后台中，打开对应的列表页面，进行数据管理。
 
-1、 产品中心
+#### 产品中心
+<img src = "https://main.qcloudimg.com/raw/07cac0652b2a6493f7733510969b8af4.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/25a2acbc5ac2925c73fbddb849728f21.jpeg)如果要修改页面上的产品列表，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+如果要修改页面上的产品列表，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/2651b66c01fd2a1ea376ecce41e82006.jpeg)
 
-![img](https://main.qcloudimg.com/raw/ec80b1169beadd127e9dccf288093ece.jpeg) 
-
-2、 在线咨询
+#### 在线咨询
 
 用户在小程序端提交咨询后，在后台数据管理页面中，找到对应的页面，查看咨询内容。
+![](https://main.qcloudimg.com/raw/299e81c0b4416b87601d0a12b42f4f82.jpeg)
 
-![img](https://main.qcloudimg.com/raw/7c6c567bbb98dfd6aa504223863819f7.jpeg) 
+#### 成功案例
+<img src = "https://main.qcloudimg.com/raw/07b9a28e6eaa4e6a80c20ff183ff1ccf.jpeg" style="width: 60%">
 
-3、 成功案例
+如果要修改成功案例的内容，在后台数据管理页面中，找到对应的页面，修改产品信息。
+![](https://main.qcloudimg.com/raw/c9b85a0fc000dd7510c4d5acfca20837.jpeg)
 
-![img](https://main.qcloudimg.com/raw/e8ad3341c0d875e538c00d955a169a78.jpeg)如果要修改成功案例的内容，在后台数据管理页面中，找到对应的页面，修改产品信息。
+#### 企业资讯
+<img src = "https://main.qcloudimg.com/raw/5aca4c330f3a0ccd4488ef9c80fa1660.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/5b8012dd4619d82fe2f131f7446c7a14.jpeg) 
+如果要修改企业资讯的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/bff7bbe984f569789698985030d918f3.jpeg)
 
-4、 企业资讯
+#### 产品中心信息
+<img src = "https://main.qcloudimg.com/raw/6b917a7cfe15f9554e470e850b2351f8.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/8eb68c195e71b392680df19710a103c7.jpeg)如果要修改企业资讯的内容，在后台数据管理页面中，找到对应的页面，修改信息
+如果要修改产品中心信息的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/f78d3e8610d211a4d6529a9c0ef62a98.jpeg)
 
-![img](https://main.qcloudimg.com/raw/0b6a9d30be332958a60ffd00dfcc38df.jpeg) 
+#### 联系方式
+<img src = "https://main.qcloudimg.com/raw/08b8ab6f4af505de68a1f643ab84e85f.jpeg" style="width: 60%">
 
-5、产品中心信息
+如果要修改联系方式的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/e04ea08fa4cd816231f5b5fca33ee7cb.png)
 
-![img](https://main.qcloudimg.com/raw/a3f4016ca70e2d2305b5a9fcfe00c95a.jpeg)如果要修改产品中心信息的内容，在后台数据管理页面中，找到对应的页面，修改信息。
 
-![img](https://main.qcloudimg.com/raw/d000ab438afe17c6cbb20ba9dbe1ac81.jpeg) 
+### 第六步： 3分钟完成小程序预览或发布
 
-6、联系方式
-
-![img](https://main.qcloudimg.com/raw/9340af8819440529b2f1a9b2244a38f6.jpeg)如果要修改联系方式的内容，在后台数据管理页面中，找到对应的页面，修改信息。
-
-![img](https://main.qcloudimg.com/raw/f500e7b85678410db31bafc43ff07792.png) 
-
-### 第六步： 3分钟完成小程序预览/发布
-
-请移步 [小程序发布文档](https://cloud.tencent.com/document/product/1301/55140)
+详情请参见 [小程序发布](https://cloud.tencent.com/document/product/1301/55140)。
 
