--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/母婴店小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/母婴店小程序模板.md
@@ -1,144 +1,152 @@
 ## 模板简介
 
-本模板是应用于汽车服务的小程序模板，包含了服务分类，中心介绍，联系我们，热门服务，知识问答等多种功能。
+本模板是应用于母婴店的小程序模板，包含了公司介绍，旅游服务介绍，企业新闻等多种功能。
 
-### 功能模块
+## 功能模块
 
-| 模块     | 功能名称                                    | 详细功能清单                                                 |
-| -------- | ------------------------------------------- | ------------------------------------------------------------ |
-| 管理后台 | 产品                                        | 产品新增/查看/编辑/删除  产品详情                            |
-| 服务类型 | 服务类型新增/查看/编辑/删除                 |                                                              |
-| 咨询     | 咨询详情                                    |                                                              |
-| 环境     | 环境新增/查看/编辑/删除                     |                                                              |
-| 特色服务 | 特色服务新增/查看/编辑/删除  特色服务详情   |                                                              |
-| 介绍     | 店铺介绍、地址、联系方式新增/查看/编辑/删除 |                                                              |
-| 问答     | 问答新增/查看/编辑/删除问答详情             |                                                              |
-| 小程序端 | 首页                                        | 服务分类                  精品服务                    热门服务                  知识问答 |
-| 中心介绍 | 中心介绍服务环境服务特色                    |                                                              |
-| 联系我们 | 咨询 联系方式                               |                                                              |
+<table>
+   <tr>
+      <th>模块</th>
+			<th>功能名称</th>
+			<th>详细功能清单</th>
+   </tr>
+   <tr>
+      <td rowspan="7">管理后台</td>
+		 <td>产品</td>
+      <td><li>产品新增/查看/编辑/删除</li><li>产品详情</li></td>  
+   </tr>
+	 <tr>
+      <td>服务类型</td>
+      <td>服务类型新增/查看/编辑/删除</td>
+   </tr>
+	 	<tr>
+      <td>咨询</td>
+      <td>咨询详情</td>
+   </tr>
+	 <tr>
+      <td>环境</td>
+      <td>环境新增/查看/编辑/删除</td>
+   </tr>	 
+	 	<tr>
+      <td>特色服务</td>
+      <td><li> 特色服务新增/查看/编辑/删除 </li><li>特色服务详情</li></td>
+   </tr>
+	 	<tr>
+      <td>介绍</td>
+      <td><li> 店铺介绍、地址、联系方式</li><li>新增/查看/编辑/删除</li></td>
+   </tr>
+	 	<tr>
+      <td>问答</td>
+      <td><li> 问答新增/查看/编辑/删除</li><li>问答详情</li></td>
+   </tr>	 
+   <tr>
+      <td rowspan="3">小程序端</td>
+      <td>首页</td>
+      <td><li> 服务分类 </li><li>精品服务</li><li>热门服务</li><li> 知识问答</li></td>
+   </tr> 
+	 	<tr>
+      <td>中心介绍</td>
+      <td><li> 中心介绍</li><li>服务环境</li><li>服务特色</li></td>
+   </tr>
+	 	<tr>
+      <td>联系我们</td>
+      <td><li> 咨询</li><li>联系方式</li></td>
+   </tr>	 
+</table>
 
-### 第一步：购买和试用小程序
+## 使用流程
+### 步骤1：购买和试用小程序
 
-[微搭应用市场](https://weda.cloud.tencent.com/)选购小程序，点击【试用7天】或【立即购买】下单，下单后跳到模版管理安装模版。
+进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购母婴店小程序，单击**试用7天**或**立即购买**下单。
+![](https://main.qcloudimg.com/raw/053fdc4bab664b439e41f6d90056ea63.jpeg)
 
-![img](https://main.qcloudimg.com/raw/941652ea8ab7c3dfc41e390410d4f797.jpeg) 
+### 步骤2：安装模版
 
-### 第二步：安装模版
+1. 进入**模板管理** > **我的模板**页面，在模版列表单击**安装**，并填写自定义名称，单击**确认**，生成可拖拽的店铺应用。
+![](https://main.qcloudimg.com/raw/92e5cb8a112e5ae1e241e5dd5d4d0818.png) 
+2. 进入**应用管理**页面，单击相应应用模板，进入应用详情页。
+![](https://main.qcloudimg.com/raw/5ec527632d96c1dcd07511724cb6d9b5.png)    
+3. 单击**进入应用页面编辑**进行 [步骤3](#step3) 店铺装修。完成 [步骤4](#step4) 后单击**外部数据管理**进入后台管理端，后台数据管理请参见 [步骤5](#step5)。
+![](https://main.qcloudimg.com/raw/9de03d53fe6c85f65c38f383ef429ec8.png)
 
-在模版列表点击安装，并填写自定义名称，生成可拖拽的店铺应用。
+### 步骤3：小程序店铺装修[](id:step3)
 
-![img](https://main.qcloudimg.com/raw/48bf278dd64e092578109a2ebde8d855.jpeg) 
+您在装修过程中遇到任何问题，欢迎咨询模版提供客服。更多应用编辑器的具体说明，请参见 [应用编辑器概述](https://cloud.tencent.com/document/product/1301/53204)。
 
-模版安装的应用通过【应用管理】，进入应用详情页
+#### 首页图片装修
+打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行图片的替换。
+![](https://main.qcloudimg.com/raw/ded747096c4bb93481e22d1952eb8820.jpeg)
 
-![img](https://main.qcloudimg.com/raw/6032e025ddfb8ca9fea1884f91b9fe9c.jpeg) 
+#### 定制新增页面
+单击**创建新页面**进行定制新页面。
+![](https://main.qcloudimg.com/raw/c10293eb8b2fb200dc2733832ae327c4.jpeg)
 
-### 第三步： 小程序店铺装修
+#### 设置页面跳转
+打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
+![](https://main.qcloudimg.com/raw/52a767daefb8bef10717f40b8345fe5c.jpeg)
 
-您在装修过程中遇到任何问题，欢迎咨询模版提供客服。
-
-装修编辑器整体介绍：
-
-页面管理：可设置所需要的页面；编辑区：可将组件拖拽到编辑区，进行页面布局；预览区：页面实时预览；页面编辑：可设置页面样式
-
-![img](https://main.qcloudimg.com/raw/3b566745c2ad3e2a89779ee500aee375.jpeg) 
-
-组件：官方组件和自定义组件；组件编辑：可设置组件数据绑定、样式、事件等 
-
-![img](https://main.qcloudimg.com/raw/d7814eb62fc2cbb44eae2f64bf4bd4a3.jpeg) 
-
-l 【页面管理】支持切换页面，对所有页面进行个性化装修
-
-l 【编辑区】点击选中要编辑的组件
-
-l 【预览区】可查看页面效果
-
-l 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-
-l 【组件】模版所带组件库，可用于新页面开发
-
-#### 1.  首页图片装修
-
-![img](https://main.qcloudimg.com/raw/b52b62201339e6880b7053fa8b7fcc64.jpeg) 
-
-#### 2.  定制新增页面
-
-![img](https://main.qcloudimg.com/raw/7a49b92dea96d59648049a65ac2b9348.jpeg) 
-
-#### 3.  设置页面跳转
-
-![img](https://main.qcloudimg.com/raw/6fa589ef7a5d089524a56efc00cbda36.jpeg) 
-
-#### 4.  定制事件响应
+#### 定制事件响应
 
 如您需要更多操作帮助，请联系您的专属顾问。
 
-### 第四步： 创建模型应用
+### 步骤4：创建模型应用[](id:step4)
+1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
+![](https://main.qcloudimg.com/raw/67d1bd2e05e09ac751bc09b897e212d1.png)    
+2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
+![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
+3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
+![](https://main.qcloudimg.com/raw/9bc0f4bacad4777532be7fbcfd3c5cef.png)        
+4. 单击**访问链接**进入发布后的应用页面。
+![](https://main.qcloudimg.com/raw/925a43bb58074bab5bd83d210baeea74.png)        
 
-点击“创建空白应用”，选择“模型应用”，点击下一步  
 
-![img](https://main.qcloudimg.com/raw/3725ac9764fbd6968f9aac5354b7112a.jpeg) 
-
-点击“进入应用页面编辑”，进入编辑页面
-
-![img](https://main.qcloudimg.com/raw/e0b90285b04075636d57a87fb087b7ce.jpeg) 
-
-点击“发布”，选择发布方式，点击下一步  
-
-![img](https://main.qcloudimg.com/raw/312cbe8cac3aa648f645e47381974521.jpeg) 
-
-发布完成后，点击"访问链接"到管理后台
-
-![img](https://main.qcloudimg.com/raw/2b899a3878f1bd3327fa92d1d1ee5236.jpeg) 
-
- 
-
-### 第五步：数据管理
+### 步骤5：数据管理[](id:step5)
 
 在发布后的企业管理后台中，打开对应的列表页面，进行数据管理。
 
-1、 知识问答
+#### 知识问答
+<img src = "https://main.qcloudimg.com/raw/e553b6e27ace96e5a3fab54e647cec39.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/7ed4c78511356f4b462f739de423784e.jpeg)如果要修改知识问答，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+如果要修改知识问答，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/17c864bf77245f4c66ff02467fe78ce6.jpeg)
 
-![img](https://main.qcloudimg.com/raw/0c8da6f1724b7592bb7b943bff470299.jpeg) 
+#### 联系方式和介绍列表
+<img src = "https://main.qcloudimg.com/raw/febc8349d23c8c0f4af57890c9827830.jpeg" style="width: 60%">
 
-2、 联系方式和介绍
+如果要修改联系方式和介绍，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/20e5840a57fc0c2fccd9e8142f314cea.jpeg)
 
-![img](https://main.qcloudimg.com/raw/f0ab09ec0a1ae13fc3f5d36a06b9b2f7.jpeg)![img](https://main.qcloudimg.com/raw/e1b0cd7f0326b8368a2f50a5513b2353.jpeg)如果要修改联系方式和介绍，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+#### 服务特色
+<img src = "https://main.qcloudimg.com/raw/06aa7ccbba491258ebbdf0f5d47729a9.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/1cab1e8cc923a7733283fac3096ba2ce.jpeg) 
+如果要修改特色服务的内容，在后台数据管理页面中，找到对应的页面，修改产品信息。
+![](https://main.qcloudimg.com/raw/1af2642c7120f47fedfa71d0a2186fc5.jpeg)
 
-3、 服务特色
+#### 服务环境
+<img src = "https://main.qcloudimg.com/raw/611a307efab32a6671f58014a8536993.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/119acf8107acf53591ec0ddb59a22650.jpeg)如果要修改特色服务的内容，在后台数据管理页面中，找到对应的页面，修改产品信息。
+如果要修改服务环境的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/62321b839fe05c5b8a2cf960fc448f98.jpeg)
 
-![img](https://main.qcloudimg.com/raw/5ec8f3ce620dc9561c6dc702e674a706.jpeg) 
+#### 查看咨询
+<img src = "https://main.qcloudimg.com/raw/d11be4cc1ef3115ff1a120e2dacd11bb.jpeg" style="width: 60%">
 
-4、 服务环境
+如果要查看咨询的内容，在后台数据管理页面中，找到对应的页面，查看内容。
+![](https://main.qcloudimg.com/raw/348e1cd5dd9af331e0637e3e0208f5bc.jpeg)
 
-![img](https://main.qcloudimg.com/raw/0057d90bf7cda9c042e8bd6f70c4ef66.jpeg)如果要修改服务环境的内容，在后台数据管理页面中，找到对应的页面，修改信息
+#### 服务分类
+<img src = "https://main.qcloudimg.com/raw/11ecc3f382c05b7490039f863fea7b8e.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/f004d90b649b6e5d18e65ddd96b0089f.jpeg) 
+如果要修改服务分类的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/4a6bac6f221545472738242ddd1ccf58.jpeg) 
 
-5、查看咨询
+#### 产品展示
+<img src = "https://main.qcloudimg.com/raw/4db6def6fcc01c2ee16a3d0133ea4203.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/5882e48a9098d329e5c4d7763460ee55.jpeg)如果要查看咨询的内容，在后台数据管理页面中，找到对应的页面，查看内容。
+如果要修改产品的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/21196bff100a813283c49e30c4ab2c49.jpeg)
 
-![img](https://main.qcloudimg.com/raw/e6e9dddd4467aac1ee615436ad63f27c.jpeg) 
 
-6、服务分类
+### 第六步： 3分钟完成小程序预览或发布
 
-![img](https://main.qcloudimg.com/raw/561987914072494d6b98122babec3ff6.jpeg)如果要修改服务分类的内容，在后台数据管理页面中，找到对应的页面，修改信息。
-
-![img](https://main.qcloudimg.com/raw/1e40c2c543d3654aca2b006af662965a.jpeg) 
-
-7、产品
-
-![img](https://main.qcloudimg.com/raw/17531a83e3078873be1e6559b3de743d.jpeg)如果要修改产品的内容，在后台数据管理页面中，找到对应的页面，修改信息。
-
-![img](https://main.qcloudimg.com/raw/0c473482ff18a611c037db60d6b0f582.jpeg) 
-
-### 第六步： 3分钟完成小程序预览/发布
-
-请移步 [小程序发布文档](https://cloud.tencent.com/document/product/1301/55140)
+详情请参见 [小程序发布](https://cloud.tencent.com/document/product/1301/55140)。
