--- a/product/计算与网络/无服务器云函数/购买指南/计费概述.md
+++ b/product/计算与网络/无服务器云函数/购买指南/计费概述.md
@@ -1,13 +1,43 @@
 
 ## 免费额度
 
-开通了云函数服务的用户，每月可享受一定量的免费资源使用量及免费调用次数，外网出流量无免费额度。如下表所示：
 
-| 计费项       |  每月免费额度 |
-| ------------| -------------- |
-| 资源使用量 | 40万GBs        |
-| 事件函数调用次数    | 100万次         |
-| Web 函数调用次数   | 100万次         |
+开通云函数 SCF 服务的用户，每月可享受一定量的免费资源使用量、免费调用次数和外网出流量。免费额度如下表：
+
+
+<table>
+  <tr>
+    <th class="align-left">发放时间</th>
+    <th class="align-left">计费项</th>
+    <th class="align-left">免费额度</th>
+  </tr>
+  <tr>
+    <td rowspan="3">前三个月（包含开通当月）每月</td>
+    <td>调用次数</td>
+    <td>200万次（事件函数和 Web 函数各100万次）</td>
+  </tr>
+  <tr>
+    <td>资源使用量</td>
+    <td>40万GBs</td>
+  </tr>
+  <tr>
+    <td>外网出流量</td>
+    <td>1GB</td>
+  </tr>
+  <tr>
+    <td rowspan="3">开通三个月后每月</td>
+    <td>调用次数</td>
+    <td>10万次（事件函数和 Web 函数各5万次）</td>
+  </tr>
+  <tr>
+    <td>资源使用量</td>
+    <td>2万GBs</td>
+  </tr>
+  <tr>
+    <td>外网出流量</td>
+    <td>0.5GB</td>
+  </tr>
+</table>
 
 详情请参阅 [免费额度说明](https://cloud.tencent.com/document/product/583/12282)。
 
