--- a/product/计算与网络/无服务器云函数/购买指南/免费额度.md
+++ b/product/计算与网络/无服务器云函数/购买指南/免费额度.md
@@ -1,28 +1,59 @@
-以下视频将为您说明 SCF 免费额度：
-<div class="doc-video-mod"><iframe src="https://cloud.tencent.com/edu/learning/quick-play/2937-54934?source=gw.doc.media&withPoster=1&notip=1"></iframe></div>
 
-开通云函数 SCF 服务的用户，每月可享受一定量的免费资源使用量及免费调用次数，外网出流量无免费额度。免费额度如下表：
+开通云函数 SCF 服务的用户，每月可享受一定量的免费资源使用量、免费调用次数和外网出流量。免费额度如下表：
 
 >?
->- 每个月的免费额度，会在每月开始时刻重置，不会进行累积。
->- 计费时，结算顺序为：免费额度 > 资源包 > 按量计费（代金券结算）> 按量计费。即优先使用免费额度，超出免费额度的部分使用处于有效期的资源包结算。若没有有效资源包或资源包已用完，则进行按量计费结算。
->- 预置并发闲置量无法使用资源使用量的免费额度抵扣。
+> - 每个月的免费额度，将在每月开始时重置，不会进行累积。
+> - 计费时，结算顺序为：**免费额度** > **资源包** > **按量计费（代金券结算）**> **按量计费**。
+> 即优先使用免费额度，超出免费额度的部分使用处于有效期的资源包结算。若无有效资源包或资源包已用完，则进行按量计费结算。
+> - 预置并发闲置量无法使用资源使用量的免费额度抵扣。
+
+<table>
+  <tr>
+    <th class="align-left">发放时间</th>
+    <th class="align-left">计费项</th>
+    <th class="align-left">免费额度</th>
+  </tr>
+  <tr>
+    <td rowspan="3">前三个月（包含开通当月）每月</td>
+    <td>调用次数</td>
+    <td>200万次（事件函数和 Web 函数各100万次）</td>
+  </tr>
+  <tr>
+    <td>资源使用量</td>
+    <td>40万GBs</td>
+  </tr>
+  <tr>
+    <td>外网出流量</td>
+    <td>1GB</td>
+  </tr>
+  <tr>
+    <td rowspan="3">开通三个月后每月</td>
+    <td>调用次数</td>
+    <td>10万次（事件函数和 Web 函数各5万次）</td>
+  </tr>
+  <tr>
+    <td>资源使用量</td>
+    <td>2万GBs</td>
+  </tr>
+  <tr>
+    <td>外网出流量</td>
+    <td>0.5GB</td>
+  </tr>
+</table>
 
 
-| 计费项 |  每月免费额度 | 
-| ---- | ------ | 
-| 资源使用量 | 400000GBs（40万GBs）  | 
-| 事件型函数调用次数    | 1000000次（100万次）   | 
-|Web 函数调用次数|1000000次（100万次）|
 
 下表标明在配置为不同内存时，单个函数每月可免费运行的时长：
 
-| 内存（MB）|免费时长（秒）|
-| --- | --- |
-| 64 | 6,400,000 |
-| 128 | 3,200,000 |
-| 256 | 1,600,000 |
-| 512 | 800,000 |
-| 1024 | 400,000 |
-| 1536 | 266,667 |
-| 3072 | 133,333 |
+| 内存（MB） | 免费时长（秒） |
+| :--------- | :------------- |
+| 64         | 6,400,000      |
+| 128        | 3,200,000      |
+| 256        | 1,600,000      |
+| 512        | 800,000        |
+| 1024       | 400,000        |
+| 1536       | 266,667        |
+| 3072       | 133,333        |
+
+
+
