--- a/product/存储与CDN/对象存储 4.0/SDK文档/Python SDK/访问管理/防盗链.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Python SDK/访问管理/防盗链.md
@@ -68,7 +68,7 @@ RefererConfiguration 说明：
 | EmptyReferConfiguration | 是否允许空 Refer 访问，枚举值： Allow、Deny | String | 否  |
 
 #### 返回结果说明
-该方法返回值为 None
+该方法返回值为 None。
 
 ## 查询存储桶 Referer
 
@@ -126,4 +126,4 @@ response = client.delete_bucket_referer(
 | bucketName  | 存储桶的命名格式为 BucketName-APPID，详情请参见 [命名规范](https://cloud.tencent.com/document/product/436/13312#.E5.AD.98.E5.82.A8.E6.A1.B6.E5.91.BD.E5.90.8D.E8.A7.84.E8.8C.83) | String                                   |
 
 #### 返回结果说明
-该方法返回值为 None
+该方法返回值为 None。
