--- a/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/内容审核/文档审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/内容审核/文档审核.md
@@ -26,7 +26,7 @@ AudioAuditingResponse createAudioAuditingJob(AudioAuditingRequest request);
 //1.创建任务请求对象
 DocumentAuditingRequest request = new DocumentAuditingRequest();
 //2.添加请求参数 参数详情请见api接口文档
-request.setBucketName("demo-123456789");
+request.setBucketName("examplebucket-1250000000");
 //2.1.1设置对象地址
 // request.getInput().setObject("1.txt");
 //2.1.2或直接设置文档地址
@@ -60,7 +60,8 @@ Input 中的具体数据描述如下：
 
 | 节点名称（关键字） | 父节点  | 描述                                                     | 类型      | 是否必选 |
 | ------------------ | ------- | -------------------------------------------------------- | --------- | ---- |
-| Url |  Input| 文件的url地址 | String |是|
+| Url |  Input| 文件的 url 地址 | String |是|
+
 #### 返回结果说明
 
 - 成功：成功则返回 DocumentAuditingResponse 文档审核任务结果对象。
@@ -85,7 +86,7 @@ AudioAuditingResponse describeAuditingJob(AudioAuditingRequest request);
 //1.创建任务请求对象
 DocumentAuditingRequest request = new DocumentAuditingRequest();
 //2.添加请求参数 参数详情请见api接口文档
-request.setBucketName("demo-123456789");
+request.setBucketName("examplebucket-1250000000");
 request.setJobId("sdd5d1cc630fdc11ecb3fa5254009******");
 //3.调用接口,获取任务响应对象
 DocumentAuditingResponse response = client.describeAuditingDocumentJob(request);
@@ -96,10 +97,9 @@ DocumentAuditingResponse response = client.describeAuditingDocumentJob(request);
 | 参数名称   | 描述                                                         | 类型   | 是否必选|
 | ---------- | ------------------------------------------------------------ | ------ |-----|
 | bucketName | Bucket 的命名规则为 BucketName-APPID，详情请参见 [存储桶概述](https://cloud.tencent.com/document/product/436/13312) | String |是|
-| jobId | 需要查询的任务 id | String |是|
+| jobId | 需要查询的任务 ID | String |是|
 
 #### 返回结果说明
 
 - 成功： 返回 DocumentAuditingResponse 审核任务结果对象。
 - 失败： 发生错误（例如身份认证失败），抛出异常 CosClientException 或者 CosServiceException。详情请参见 [异常处理](https://cloud.tencent.com/document/product/436/35218)。
-
