--- a/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/内容审核/文本审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/内容审核/文本审核.md
@@ -62,8 +62,10 @@ Input 中的具体数据描述如下：
 
 | 节点名称（关键字） | 父节点  | 描述                                                     | 类型      | 是否必选 |
 | ------------------ | ------- | -------------------------------------------------------- | --------- | ---- |
-| Object |  Input| 文件在对象存储bucket中的相对位置信息 | String |否|
-| Content | Input | 文本内容，需传入文本的Base64编码后的内容 | String |否|
+| Object |  Input| 文件在对象存储 bucket 中的相对位置信息 | String |否|
+| Content | Input | 文本内容，需传入文本的 Base64 编码后的内容 | String |否|
+
+
 #### 返回结果说明
 
 - 成功：成功则返回 TextAuditingResponse 文本审核任务结果对象。
@@ -99,10 +101,10 @@ TextAuditingResponse response = client.describeAuditingTextJob(request);
 | 参数名称   | 描述                                                         | 类型   | 是否必选|
 | ---------- | ------------------------------------------------------------ | ------ |-----|
 | bucketName | Bucket 的命名规则为 BucketName-APPID，详情请参见 [存储桶概述](https://cloud.tencent.com/document/product/436/13312) | String |是|
-| jobId | 需要查询的任务 id | String |是|
+| jobId | 需要查询的任务 ID | String |是|
+
 
 #### 返回结果说明
 
 - 成功： 返回 TextAuditingResponse 审核任务结果对象。
 - 失败： 发生错误（例如身份认证失败），抛出异常 CosClientException 或者 CosServiceException。详情请参见 [异常处理](https://cloud.tencent.com/document/product/436/35218)。
-
