--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/图片审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/图片审核.md
@@ -41,7 +41,7 @@ try {
 }
 ```
 
-#### 示例二：审核图片URL
+#### 示例二：审核图片 URL
 ```php
 try {
     //图片链接审核
@@ -67,15 +67,15 @@ try {
 
 #### 参数说明
 
-Request中的主要参数描述如下：
+Request 中的主要参数描述如下：
 
 | 参数名称             | 类型   | 描述                                                         | 是否必填 |
 | ------------------ | ------- | -------------------------------------------------------- | --------- | 
 | Bucket               | String | 存储桶名称，格式：BucketName-APPID                           | 是       |
-| Key                  | String | 此处的 Key 为对象键，对象键是对象在存储桶中的唯一标识。例如，在对象的访问域名<br>`examplebucket-1250000000.cos.ap-guangzhou.myqcloud.com/doc/pic.jpg`中，对象键为`doc/pic.jpg`，此处为图片文件在bucket中的位置(当已传入DetectUrl时，填'/'即可) | 是       |
+| Key                  | String | 此处的 Key 为对象键，对象键是对象在存储桶中的唯一标识。例如，在对象的访问域名<br>`examplebucket-1250000000.cos.ap-guangzhou.myqcloud.com/doc/pic.jpg`中，对象键为`doc/pic.jpg`，此处为图片文件在 bucket 中的位置（当已传入 DetectUrl 时，填'/'即可） | 是       |
 | DetectType | String | 审核类型审核类型，porn（涉黄识别）、terrorist（涉暴恐识别）、politics（涉政识别）、ads（广告识别）四种。可选择多种识别类型用`,`连接| 是   |
 | DetectUrl | String | 审核图片的链接| 否   |
-| Interval | Int | 审核gif时使用 截帧的间隔| 否   |
+| Interval | Int | 审核 GIF 时使用截帧的间隔| 否   |
 | MaxFrames | Int | 针对 GIF 动图审核的最大截帧数量，需大于0| 否   |
 | BizType | String | 审核策略| 否   |
 
