--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文档审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文档审核.md
@@ -58,7 +58,7 @@ Conf 中的具体数据描述如下：
 
 | 参数名称             | 类型   | 描述                                                         | 是否必填 |
 | ------------------ | ------- | -------------------------------------------------------- | --------- |
-| DetectType |  String| 审核的场景类型，有效值：Porn（涉黄）、Terrorism（涉暴恐）、Politics（政治敏感）、Ads（广告），可以传入多种类型，不同类型以逗号分隔，例如：Porn,Terrorism。 | 是|
+| DetectType |  String| 审核的场景类型，有效值：Porn（涉黄）、Terrorism（涉暴恐）、Politics（政治敏感）、Ads（广告），可以传入多种类型，不同类型以逗号分隔，例如：Porn，Terrorism | 是|
 | BizType | String|  审核策略 | 否|
 | Callback | String|  回调地址，以`http://`或者`https://`开头的地址 | 否|
 
@@ -117,7 +117,7 @@ try {
 | 参数名称             | 类型   | 描述                                                         | 是否必填 |
 | ---------- | ------------------------------------------------------------ | ------ |-----|
 | Bucket               | String | 存储桶名称，格式：BucketName-APPID                           | 是       |
-| Key | 需要查询的任务id | String |是|
+| Key | String | 需要查询的任务 ID |是|
 
 #### 返回结果示例
 
