--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/视频审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/视频审核.md
@@ -70,7 +70,7 @@ Conf 中的具体数据描述如下：
 | BizType | String|  审核策略 | 否|
 | Callback | String|  回调地址，以`http://`或者`https://`开头的地址 | 否|
 | DetectContent | Int|  是否审核视频声音，默认0 | 否|
-| CallbackVersion | String|  回调内容结构，Simple或Detail，默认Simple | 否|
+| CallbackVersion | String|  回调内容结构，Simple 或 Detail，默认 Simple | 否|
 
 Snapshot 中的具体数据描述如下：
 
@@ -135,7 +135,7 @@ try {
 | 参数名称             | 类型   | 描述                                                         | 是否必填 |
 | ---------- | ------------------------------------------------------------ | ------ |-----|
 | Bucket               | String | 存储桶名称，格式：BucketName-APPID                           | 是       |
-| Key | 需要查询的任务id | String |是|
+| Key | String | 需要查询的任务 ID |是|
 
 #### 返回结果示例
 
