--- a/product/移动与通信/版权音乐助手/产品简介/产品概述.md
+++ b/product/移动与通信/版权音乐助手/产品简介/产品概述.md
@@ -1,32 +1,15 @@
-正版曲库直通车（版权音乐助手，Authorized Music Express，AME）是基于腾讯音乐娱乐集团（TME）海量线上背景音乐专用曲库资源，结合腾讯云存储，内容加速分发等基础能力，为解决内容创作过程中的正版背景音乐素材应用问题设计的 PaaS 产品。开发者在控制台一键域名接入，三步完成 API 调用，即可便捷地实现海量正版背景音乐素材在多端的顺畅播放与应用。
+正版曲库直通车（Authorized Music Express，AME）是聚合腾讯音乐娱乐集团（TME）和多家合作版权方的曲库资源开发的 PaaS 产品。服务结合了腾讯云存储、编解码、内容分发、边缘计算等能力，可为客户提供海量热门歌曲，实现版权多样化覆盖。您可在控制台通过下载/API/SDK 多种接入方式，便捷实现应用的功能拓展，高效完成版权音乐在多端的播放和使用。
 
 ## 产品功能
 
-#### 海量素材快速获取
+### 歌曲版权多维覆盖
+提供海量正版曲库授权，解决线上 K 歌、直播、语聊房、FM、内容创作等多场景下的版权问题，音乐商用无烦忧，为您的业务增长保驾护航。
 
-提供海量正版背景音乐曲库授权，解决内容创作过程中的正版背景音乐素材应用问题，为您的业务增长保驾护航。
+### 海量歌曲实时更新
+海内外热门歌曲快速收录、曲库内容持续优质更新、精选类目歌单使用推荐，快速释放运营资源，助力您保持高质量的应用服务。
 
-#### 素材内容加速分发
+### 歌曲内容加速分发
+提供版权歌曲的加速分发能力，完美解决地域、网络、源站性能等多因素引起的用户访问延迟较高、不稳定等问题。
 
-提供版权素材的加速分发能力，完美解决地域、网络、源站性能等多因素引起的用户访问延迟较高、不稳定等问题。
-
-
-
-
-## 产品优势
-
-#### 海量曲库，提升用户体验
-
-正版曲库资源均来源于腾讯音乐娱乐集团（TME），可为您提供风格各异的音乐歌单，一站式满足您在各类细分场景下的素材应用需求，无需耗费大量时间及资金逐个从唱片公司获取授权。且曲库中的歌曲根据时下热点定期更新，无需额外运营人力即可为终端用户提供优质的创作素材。
-
-#### 一站式，线上快速接入
-
-您只需要在控制台配置访问音乐素材的域名，即可快速获得经过腾讯音乐娱乐集团（TME）官方授权的正版音乐素材，无需自行搭建或购买内容分发、存储等其他服务，极大降低了正版音乐地接入难度，将您从非核心的事务中解放出来，更好的聚焦创新玩法等核心业务。
-
-#### 按量付费，节省版权开支
-
-AME 以接口的形式提供服务，您只需要为用户真正喜爱的音乐素材，按照分发过程中所引起的用量消耗付费。无用量，不计费。从而避免因采购冷门歌曲带来的成本损失。
-
-#### 适用场景广泛
-
-适用于图片相册美化、短视频拍摄编辑、各类 UGC 内容社区、电商平台和游戏等多种类型的移动应用、小程序。在产品使用期间无需担心侵权风险，为您的业务增长保驾护航。
+### 功能模块简易添加
+携手腾讯云 TRTC 提供资源整合方案，现已搭建在线 K 歌等场景化组件模块化设计，助力开发者自由组合。
