--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文本审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/文本审核.md
@@ -81,7 +81,7 @@ Conf 中的具体数据描述如下：
 
 | 参数名称             | 类型   | 描述                                                         | 是否必填 |
 | ------------------ | ------- | -------------------------------------------------------- | --------- |
-| DetectType |  String| 审核的场景类型，有效值：Porn（涉黄）、Terrorism（涉暴恐）、Politics（政治敏感）、Ads（广告）、Illegal（违法）、Abuse（谩骂），可以传入多种类型，不同类型以逗号分隔，例如：Porn，Terrorism。 | 是|
+| DetectType |  String| 审核的场景类型，有效值：Porn（涉黄）、Terrorism（涉暴恐）、Politics（政治敏感）、Ads（广告）、Illegal（违法）、Abuse（谩骂），可以传入多种类型，不同类型以逗号分隔，例如：Porn，Terrorism | 是|
 | BizType | String|  审核策略 | 否|
 | Callback | String|  回调地址，以`http://`或者`https://`开头的地址 | 否|
 
