--- a/product/计算与网络/GPU 云服务器/最佳实践/AI训练加速引擎TACOTraining最佳实践/部署及实践.md
+++ b/product/计算与网络/GPU 云服务器/最佳实践/AI训练加速引擎TACOTraining最佳实践/部署及实践.md
@@ -2,7 +2,7 @@
 
 ## 说明事项
 - 目前 TACO-Training 仅支持 GPU 云服务器。
-- 目前 TACO-Training 的三个加速组件已集成至同一个 Docker 镜像中，后续会提供单独的 whl 安装包，可结合您的实际开发环境集成组件。拉取镜像地址如下：
+- 目前 TACO-Training 的三个加速组件已集成至同一个 Docker 镜像中，拉取镜像地址如下：
 ```bash
 ccr.ccs.tencentyun.com/qcloud/taco-training:cu112-cudnn81-py3-0.3.1
 ```
@@ -216,7 +216,7 @@ pip show light-horovod
 | LIGHT_TOPK_FP16              | 0          | 压缩通信的 value 是否转为 FP16                                  |
 
 #### Demo
-1. 创建两台 GPU 实例后，依次按照上述步骤配置实例环境。
+1. 创建两台 GPU 实例后，依次按照上述步骤安装 LightCC 并配置环境变量。
 2. 在容器中依次执行以下命令，对两台实例进行 SSH 免密处理。
 ```bash
 #允许root使用ssh服务，并启动服务（默认端口：22）
@@ -274,6 +274,8 @@ wget https://raw.githubusercontent.com/horovod/horovod/master/examples/tensorflo
 ![](https://main.qcloudimg.com/raw/b35562c0fb082d47c776df8baf2125dd.png)
 
 ### 使用 HARP
+
+#### 实例环境准备
 1. 以 root 用户身份执行以下命令，修改内核的 cmdline，配置50G大页内存。
 ```bash
 sed -i '/GRUB_CMDLINE_LINUX/ s/"$/ default_hugepagesz=1GB hugepagesz=1GB hugepages=50"/' /etc/default/grub
@@ -314,7 +316,7 @@ docker run -it -d --gpus all --privileged --net=host -v /sys/bus/pci/devices:/sy
 ```
 
 #### Demo
-1. 创建两台 GPU 实例后，依次按照上述步骤配置实例环境。
+1. 创建两台 GPU 实例后，依次按照上述步骤配置实例环境并安装 HARP。
 2. 在 Docker 中依次执行以下命令，对两台实例进行 SSH 免密处理。
 ```bash
 #允许root使用ssh服务，并启动服务（默认端口：22）
