--- a/product/存储与CDN/明瞳智控/产品简介/产品概述.md
+++ b/product/存储与CDN/明瞳智控/产品简介/产品概述.md
@@ -24,4 +24,4 @@
 提供就近无感上云服务，客户无需感知存储节点，系统自动就近分配上云节点，可大大降低时延，提升计算效率。
 
 #### 模板配置
-支持转码用量、截图张数、AI 模版使用时长配置，并可与数据万象 CI 等产品集成，提供多种媒体处理增值服务。
+支持转码用量、截图张数、AI 模版使用时长配置，并可与数据万象（Cloud Infinite，CI）等产品集成，提供多种媒体处理增值服务。
