--- a/product/存储与CDN/明瞳智控/产品简介/产品优势.md
+++ b/product/存储与CDN/明瞳智控/产品简介/产品优势.md
@@ -1,5 +1,5 @@
 ### 数据可靠、安全防护
-监控数据存储于腾讯云对象存储 COS 中，数据跨多架构、多设备冗余存储，提供异地容灾和资源隔离，保证业界领先的数据持久性。同时提供防盗链功能，可屏蔽恶意来源的访问，支持数据 SSL 加密传输，控制每个单独文件的访问权限，保障用户数据安全可靠接入、存储和处理。
+监控数据存储于腾讯云对象存储（Cloud Object Storage，COS）中，数据跨多架构、多设备冗余存储，提供异地容灾和资源隔离，保证业界领先的数据持久性。同时提供防盗链功能，可屏蔽恶意来源的访问，支持数据 SSL 加密传输，控制每个单独文件的访问权限，保障用户数据安全可靠接入、存储和处理。
 
 ### 融合架构、弹性扩容
 采取云-边-端融合架构，支持无感就近上云，客户只需关注本地摄像头，后端按需支撑。同时灵活支撑系统规模快速增长及业务突发性带来的资源伸缩，提高资源利用率，灵活应对高并发需求。
