--- a/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/内容审核/文档审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/内容审核/文档审核.md
@@ -17,7 +17,7 @@
 #### 方法原型
 
 ```java
-AudioAuditingResponse createAudioAuditingJob(AudioAuditingRequest request);
+DocumentAuditingResponse createAuditingDocumentJobs(DocumentAuditingRequest request);
 ```
 
 #### 请求示例
@@ -77,7 +77,7 @@ Input 中的具体数据描述如下：
 #### 方法原型
 
 ```java
-AudioAuditingResponse describeAuditingJob(AudioAuditingRequest request);
+DocumentAuditingResponse describeAuditingJob(DocumentAuditingRequest request);
 ```
 
 #### 请求示例
