--- a/product/监控与管理/Grafana 可视化服务/产品简介/产品优势.md
+++ b/product/监控与管理/Grafana 可视化服务/产品简介/产品优势.md
@@ -1,12 +1,12 @@
-**节省成本**
+### 节省成本
 
-Grafana 服务自动为您构建、安装、部署、维护和管理 Grafana ，节省 Grafana构建、运维成本。
+Grafana 服务自动为您构建、安装、部署、维护和管理 Grafana ，节省 Grafana 构建、运维成本。
 
-**数据安全性**
+### 数据安全性
 
 Grafana 服务结合 私有网络（Virtual Private Cloud，VPC）能力， 支持开通内、外网访问控制，提升 Grafana 数据安全性。
 
-**多种数据源集中展示和管理**
+### 多种数据源集中展示和管理
 
-支持腾讯云数据源（云监控、Prometheus监控服务、容器服务等）和流行的第三方数据源（Graphite，InfluxDB等）集中展示和管理。
+Grafana 可视化服务支持腾讯云数据源（云监控、Prometheus 监控服务、容器服务等）和流行的第三方数据源（Graphite，InfluxDB 等）集中展示和管理。
 
