--- a/product/监控与管理/Grafana 可视化服务/快速入门.md
+++ b/product/监控与管理/Grafana 可视化服务/快速入门.md
@@ -4,19 +4,19 @@
 ## 操作步骤
 ### 创建Grafana
 1. 登录 [云监控 Grafana 服务控制台](https://console.cloud.tencent.com/monitor/grafana)。
-2. 单击【新建】，根据页面提示配置信息，详情参考 [新建 Grafana 实例](#缺文档链接)。
-3. 配置完后，单击【立即购买】即可。
+2. 单击**新建**，根据页面提示配置信息，详情参考 [新建 Grafana 实例](#缺文档链接)。
+3. 配置完后，单击**立即购买**即可。
 
 ### 配置Grafana
-1. 在[云监控 Grafana 服务列表](https://console.cloud.tencent.com/monitor/grafana)中，找到对应的实例，单击操作区中的【管理】。
-2. 进入 Grafana 管理页，单击【设置】。
-3. 在设置页左上方单击【编辑】，根据提示修改配置文件。
-4. 修改完后，单击【确定】即可。
+1. 在 [云监控 Grafana 服务列表](https://console.cloud.tencent.com/monitor/grafana) 中，找到对应的实例，单击操作区中的**管理**。
+2. 进入 Grafana 管理页，单击**设置**。
+3. 在设置页左上方单击**编辑**，根据提示修改配置文件。
+4. 修改完后，单击**确定**即可。
 
 ### 登录 Grafana 查看监控数据
-1. 在[云监控 Grafana 服务列表](https://console.cloud.tencent.com/monitor/grafana)中，找到对应的实例，单击实例 ID 右侧【<img src="https://main.qcloudimg.com/raw/978c842f0c093a31df8d5240dd01016d.png" width="2%">】 图标。
+1. 在 [云监控 Grafana 服务列表](https://console.cloud.tencent.com/monitor/grafana) 中，找到对应的实例，单击实例 ID 右侧 <img src="https://main.qcloudimg.com/raw/978c842f0c093a31df8d5240dd01016d.png" width="2%"> 图标。
 2. 进入 Grafana，输入 Grafana 登录账号和密码。即可进行 Grafana 可视化大屏操作区。
-3. 单击【<img src="https://main.qcloudimg.com/raw/7e3fff6131aa085987552a9725e9ae54.png" width="2%">】按钮，进入监控面板列表页。
+3. 单击 <img src="https://main.qcloudimg.com/raw/7e3fff6131aa085987552a9725e9ae54.png" width="2%">，进入监控面板列表页。
 4. 在监控面板列表页单击对应的监控图表名称，即可查看监控数据。
 ![](https://main.qcloudimg.com/raw/8d9c88d74a9fc1732145040f6df3954f.png)
 
