--- a/product/监控与管理/Prometheus 监控服务/Grafana 服务/快速入门.md
+++ b/product/监控与管理/Prometheus 监控服务/Grafana 服务/快速入门.md
@@ -4,7 +4,7 @@
 ## 操作步骤
 ### 创建Grafana
 1. 登录 [云监控 Grafana 服务控制台](https://console.cloud.tencent.com/monitor/grafana)。
-2. 单击**新建**，根据页面提示配置信息，详情参考 [新建 Grafana 实例](#缺文档链接)。
+2. 单击**新建**，根据页面提示配置信息，详情参考 [新建 Grafana 实例](https://cloud.tencent.com/document/product/1416/61644)。
 3. 配置完后，单击**立即购买**即可。
 
 ### 配置Grafana
