--- a/product/移动与通信/版权音乐助手/购买指南.md
+++ b/product/移动与通信/版权音乐助手/购买指南.md
@@ -84,7 +84,8 @@
 </tr>
 <tr>
 <td>商用 B<br>曲库包</td>
-<td>图文/音频/视频内容创作配乐</td>
+<td>图文/音频/视频内容创作配乐/铃声
+</td>
 <td>&#10003;</td>
 </tr>
 </tbody></table>
