--- a/product/计算与网络/事件总线/快速入门/告警推送配置与管理.md
+++ b/product/计算与网络/事件总线/快速入门/告警推送配置与管理.md
@@ -5,7 +5,7 @@
 
 ## 使用须知
 1. 事件告警推送能力将于2021年10月15日正式上线。
-2. 云监控事件中心相关功能将于2021年10月31日起逐步下线，相关能力将由事件总线承载，并在原有功能上新增规则匹配、自定义事件集、多目标投递等特性。为保证您的事件相关服务可以正常使用，2021年9月30日起，您需要开通事件总线产品并进行能力迁移，我们也提供 [一键迁移](#1) 服务，该操作不会产生额外费用。
+2. 云监控事件中心相关功能将于2021年10月31日起逐步下线，相关能力将由事件总线承载，并在原有功能上新增规则匹配、自定义事件集、多目标投递等特性。为保证您的事件相关服务可以正常使用，2021年9月30日起，您需要开通事件总线产品并进行能力迁移，我们向您提供 [一键迁移](#1) 服务，该操作不会产生额外费用。
 
 ## 告警配置步骤
 ### 1. 查看事件列表
