--- a/product/数据库/数据传输服务DTS/数据同步/数据同步支持的数据库.md
+++ b/product/数据库/数据传输服务DTS/数据同步/数据同步支持的数据库.md
@@ -1,10 +1,12 @@
-腾讯云 DTS 支持如下方式部署的数据库的同步。
+腾讯云 DTS 支持自建数据库、云数据库和其他云厂商数据库的同步，具体的网络接入方式如下。
 - 公网：通过公网 IP 接入的自建数据库。
 - 云主机自建：腾讯云服务器 CVM 上的自建数据库。
 - 专线/VPN 接入：通过专线/VPN 网关接入的自建数据库。
 - 私有网络 VPC：通过私有网络 VPC 接入的自建数据库。
 - 云数据库：腾讯云数据库。
 - 云联网：通过云联网接入的自建数据库。
+
+支持同步的数据库详情如下表所示。
 
 
 | **数据流向**            | **同步方向** | **源数据库**                       | **目标数据库**                   | **数据初始化类型**           |
