--- a/product/移动与通信/版权音乐助手/入门指引/直播互动曲库/服务开通指引.md
+++ b/product/移动与通信/版权音乐助手/入门指引/直播互动曲库/服务开通指引.md
@@ -1,1 +1,23 @@
 
+直播互动曲库内测中，面向即时广播音乐播放场景，可填写 [问卷](https://cloud.tencent.com/apply/p/mgbw2h94lxe) 信息了解更多或加入内测。
+
+### 步骤1：注册腾讯云账号
+在开始使用腾讯云服务之前，您需要先注册一个腾讯云账号。拥有腾讯云账号后，您可以在腾讯云网站、控制台登录腾讯云，从而选购和使用您需要的云产品和服务。您可以使用微信扫码，邮箱，QQ，微信公众号进行快速注册，单击 [这里](https://cloud.tencent.com/register?s_url=https%3A%2F%2Fcloud.tencent.com%2F) 开始注册。
+
+### 步骤2：完成实名认证
+因正版曲库直通车产品涉及版权授权，需要您提前完成账号企业实名认证，若为个人开发者需提前完成个人实名认证。详细指引请参见 [实名认证基本介绍](https://cloud.tencent.com/document/product/378/3629)。
+
+### 步骤3：服务开通
+正版曲库直通车 AME 服务开通：登录 [正版曲库直通车控制台](https://console.cloud.tencent.com/ame/recommend)，您可在勾选同意 [腾讯云服务协议](https://cloud.tencent.com/document/product/301/1967) 以及 [正版曲库直通车服务协议](https://cloud.tencent.com/document/product/1155/40757) 后单击**立即开通**，即可开通服务。
+
+### 步骤4：应用创建
+您可在 [正版曲库直通车控制台](https://console.cloud.tencent.com/ame/recommend) 左导航栏进入**应用管理**页面，单击**创建应用**，根据弹窗填空提示，填写相应的信息。
+![](https://main.qcloudimg.com/raw/ea4b6496de63a67d195b6e5757b47320.png)
+- 应用名称：指接入 App 应用名称。应用名称涉及版权授权，请准确填写，创建后无法再次修改。
+- Android PackageName：指接入应用在安卓应用市场的 PackageName。请准确填写，创建后无法再次修改。
+- iOS BundleID：指接入应用在 iOS 应用市场的 BundleID。请准确填写，创建后无法再次修改。
+- 应用场景：请根据接入应用的具体使用场景如实选择（语聊房/直播/FM）。
+- DAU：请基于接入应用实际情况准确填写。
+
+### 步骤5: 白名单添加
+因产品尚在内测，在正式接入之前，请联系对应商务经理或 [联系我们](https://cloud.tencent.com/act/event/connect-service?from=intro_ame#/) 为您添加白名单。您也可加入产品官方 QQ 群：547084042，获取产品一手资讯，在线答疑。
