update COS Go SDK

--- a/product/存储与CDN/对象存储 4.0/SDK文档/Go SDK/对象操作.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Go SDK/对象操作.md
@@ -750,7 +750,7 @@ if err == nil {
 
 #### 请求示例3：修改存储类型
 
->!标准存储可以修改为低频存储、智能分层存储、归档存储和深度归档存储等，如果希望将归档存储或深度归档存储的对象修改为其他存储类型，首先需要使用 PostRestore 将归档存储或深度归档存储的对象回热，才能使用该接口请求修改存储类型；关于存储类型的详细说明请参见 [存储类型概述](https://cloud.tencent.com/document/product/436/33417)
+>!标准存储可以修改为低频存储、智能分层存储、归档存储和深度归档存储等，如果希望将归档存储或深度归档存储的对象修改为其他存储类型，首先需要使用 PostRestore 将归档存储或深度归档存储的对象回热，才能使用该接口请求修改存储类型；关于存储类型的详细说明请参见 [存储类型概述](https://cloud.tencent.com/document/product/436/33417)。
 
 ```go
 name := "exampleobject"
