--- a/product/存储与CDN/对象存储 4.0/SDK文档/Go SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Go SDK/快速入门.md
@@ -114,7 +114,7 @@ client := cos.NewClient(b, &http.Client{
 COS Go SDK 默认开启了文件上传 CRC64 检验。
 
 >! 
->- COS Go SDK 版本需要大于等于 v0.7.23
+>- COS Go SDK 版本需要大于等于 v0.7.23。
 >- 强烈不建议用户关闭 CRC64 校验。
 ```
 // 将 examplebucket-1250000000 和 COS_REGION 修改为真实的信息
