--- a/product/开发者工具/CODING DevOps/持续集成/常见问题/持续集成与代码仓库相关.md
+++ b/product/开发者工具/CODING DevOps/持续集成/常见问题/持续集成与代码仓库相关.md
@@ -38,7 +38,7 @@ pipeline {
 [](#svn)
 ### 如何调用 SVN 仓库？
 
-在默认的持续集成计划的配置过程中，所运行的代码源默认是 Git 类型仓库。若希望使用 [SVN 仓库](https://yehe.woa.com/document/doc-cn/product-article/1112/57835) 运行持续集成，下文给出了指引。
+在默认的持续集成计划的配置过程中，所运行的代码源默认是 Git 类型仓库。若希望使用 [SVN 仓库](https://cloud.tencent.com/document/product/1112/57835) 运行持续集成，下文给出了指引。
 
 #### 前提条件
 在开始之前，请先创建项目令牌与申请用户名+密码凭据。
