--- a/product/安全服务/文本内容安全/快速入门.md
+++ b/product/安全服务/文本内容安全/快速入门.md
@@ -15,8 +15,7 @@
 
 ### 自定义策略配置 [](id:DIY)
 如使用默认策略，则**可略过此步骤**；如要进行更加个性化的服务体验，您可按照如下步骤，自行配置审核策略用于服务体验：
-1. 在 [策略管理页面](https://console.cloud.tencent.com/cms/text/strategy)，单击左上角的【创建策略】，进入创建策略
-页面。
+1. 在 [策略管理页面](https://console.cloud.tencent.com/cms/text/strategy)，单击左上角的【创建策略】，进入创建策略页面。
 ![](https://main.qcloudimg.com/raw/c77b52c512e0c9655b96d8afbcdb6847.png)
 2. 在创建策略页面，填写策略的相关信息，包括策略名称、Biztype 名称和行业分类，单击【下一步】。
 >?在填写好行业分类之后，可以选择是否使用腾讯云预设的行业模板进行审核。
