--- a/product/安全服务/文本内容安全/快速入门.md
+++ b/product/安全服务/文本内容安全/快速入门.md
@@ -9,7 +9,7 @@
 
 ### 服务体验教程
 在  [服务体验页面](https://console.cloud.tencent.com/cms/text/experience)，应用策略选择默认审核策略，输入需要审核的内容，单击 【立即审核】， 即可体验文本内容安全服务。
->? 应用策略中自定义策略相关配置，可参考 [自定义策略配置](#DIY) 。'
+>? 应用策略中自定义策略相关配置，可参考 [自定义策略配置](#DIY) 。
 >
 ![](https://main.qcloudimg.com/raw/d19f0ca16686a61cc825fc769cf33c5c.png)
 
