--- a/product/监控与管理/混沌演练平台/快速入门.md
+++ b/product/监控与管理/混沌演练平台/快速入门.md
@@ -19,7 +19,7 @@
 </tr>
 <tr>
 <td>演练描述</td>
-<td>填写演练多原因、演练背景、演练时间、演练可能造成的影响等信息</td>
+<td>填写演练原因、演练背景、演练时间、演练可能造成的影响等信息</td>
 </tr>
 <tr>
 <td>自定义标签</td>
@@ -79,7 +79,7 @@
 </tr>
 <tr>
 <td>护栏策略</td>
-<td>1. 单击<b>添加策略</b>，跳转到云监控增加监控策略，指标添加成功后返回到混沌演练平台将刷新界面<br>2. 选择刚才创建的监控策略，设置护栏规则</td>
+<td>1. 单击<b>添加策略</b>，跳转到云监控增加监控策略，策略添加成功后返回到混沌演练平台将刷新界面<br>2. 选择刚才创建的监控策略，设置护栏规则</td>
 </tr>
 <tr>
 <td>演练暂停时长</td>
