--- a/product/数据库/云数据库MySQL/操作指南/参数模版管理/参数模板性能对比.md
+++ b/product/数据库/云数据库MySQL/操作指南/参数模版管理/参数模板性能对比.md
@@ -4,9 +4,14 @@
 #### 安装工具
 本文测试使用的是 Sysbench 1.0.20 版本，安装方法如下：
 ```
-git clone https://github.com/akopytov/sysbench.gitgit checkout 1.0.20yum install gcc gcc-c++ autoconf automake make libtool bzr mysql-devel git mysql
+git clone https://github.com/akopytov/sysbench.git
+git checkout 1.0.20
+yum install gcc gcc-c++ autoconf automake make libtool bzr mysql-devel git mysql
 cd sysbench
-./autogen.sh./configuremake -jmake install
+./autogen.sh
+./configure
+make -j
+make install
 ```
 
 >?以上是在压测 CVM（CentOS 系统）上的安装方法，如需安装到其他操作系统，请参见 [Sysbench 官方文档](https://github.com/akopytov/sysbench?spm=a2c4g.11186623.2.12.36061072oZL2qS)。
