--- a/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
+++ b/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
@@ -31,7 +31,7 @@
 | innodb_table_drop_mode                 | SYNC_DROP                 | ASYNC_DROP             | SYNC_DROP         |    
 | innodb_flush_log_at_trx_commit         | 2                         | 2                                 | 1                                 |   
 
-详细设置请参考 [设置实例参数](https://cloud.tencent.com/document/product/236/42500)。
+参数模板详细介绍请参见 [使用参数模板](https://cloud.tencent.com/document/product/236/61669)。
 
 ### 新增可设置参数
 
@@ -89,10 +89,12 @@
 | 运算符 | 公式语法：使用 {} 包裹。 <li>除法运算符（/）：用被除数除以除数，返回整数型商。如果计算结果为小数，会截断取整数部分。不支持小数，例如系统支持 {MIN(DBInitMemory/4+500,1000000)}，不支持 {MIN(DBInitMemory\*0.25+500,1000000)}。<li> 乘法运算符（*）：两个乘数相乘，返回整数型积。如果计算结果为小数，会截断取整数部分。不支持小数运算。 |  -                     |    
 | 函数   | <li>函数 MAX()，返回整数型或者参数公式列表中最大的值。 <li>函数 MIN()，返回整数型或者参数公式列表中最小的值。</li> | {MAX(DBInitCpu/2,4)}  |     
 
+参数详细设置请参见 [设置实例参数](https://cloud.tencent.com/document/product/236/61668)。
+
 ## 新购实例优化
 相较于原有新购实例流程，取消了初始化过程，在新购页面支持选择字符集、表名大小写敏感、填写数据库访问端口、root 密码。
 
-详细变化请参见 [创建 MySQL 实例](https://cloud.tencent.com/document/product/236/46433)。
+详细请参见 [创建 MySQL 实例](https://cloud.tencent.com/document/product/236/61667)。
 
 ## 联系我们
 若您有任何疑问，可随时 [联系我们](https://cloud.tencent.com/act/event/connect-service)。感谢您长期以来对腾讯云的支持，腾讯云也将持续为您提供更高性价比的产品。
