--- a/product/数据库/云数据库MySQL/操作指南/参数模版管理/管理参数模板.md
+++ b/product/数据库/云数据库MySQL/操作指南/参数模版管理/管理参数模板.md
@@ -30,7 +30,7 @@
 | ------------------------- | ------------------------- | --------------------------------- | --------------------------------- |
 | innodb_read_io_threads                 | 12        | {MAX(DBInitCpu/2,4)}              | {MAX(DBInitCpu/2,4)}        |
 | innodb_write_io_threads                | 12         | {MAX(DBInitCpu/2,4)}              | {MAX(DBInitCpu/2,4)}        |
-| max_connections                        | 10000      | {MIN(DBInitMemory/4+500,1000000)} | {MIN(DBInitMemory/4+500,1000000)} |
+| max_connections         | 10000      | {MIN(DBInitMemory/4+500,100000)} | {MIN(DBInitMemory/4+500,100000)} |
 | table_definition_cache                 | 768         | {MAX(DBInitMemory*512/1000,2048)} | {MAX(DBInitMemory*512/1000,2048)} |
 | table_open_cache                       | 2000                      | {MAX(DBInitMemory*512/1000,2048)} | {MAX(DBInitMemory*512/1000,2048)} |
 | table_open_cache_instances             | 16                        | {MIN(DBInitMemory/1000,16)}       | {MIN(DBInitMemory/1000,16)}       |
