--- a/product/移动与通信/云开发低代码平台/操作指南/数据源/外部数据源模板.md
+++ b/product/移动与通信/云开发低代码平台/操作指南/数据源/外部数据源模板.md
@@ -10,7 +10,7 @@
 
 1. 进入 [**数据源管理**](https://console.cloud.tencent.com/lowcode/datasource/index) 页面，可以查看到所有已创建的数据源列表，单击**新建外部数据源**进行新建 ，如下图所示：
 ![](https://main.qcloudimg.com/raw/9fc71fc6f4836dd8b8ead13c86b11721.png)
-2. 进入**新建外部数据源**弹窗页面，在**应用来源**中选择**模板创建**，选择想要使用的模板并授权后单击**开始新建**即可完成创建。 
+2. 进入**新建外部数据源**弹窗页面，在**应用来源**中选择**模板创建**，选择想要使用的模板并授权后单击**开始新建**即可完成创建。 <br>
 <img src = "https://main.qcloudimg.com/raw/7f1e3753323bb567443122650b4e05a6.png" style="width: 80%">
 
 
