--- a/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
+++ b/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
@@ -45,8 +45,8 @@
 | innodb_buffer_pool_instances              |  &#10003; |  &#10003;   |  &#10003;   |     
 | innodb_buffer_pool_size                      |  &#10003; |  &#10003;   |  &#10003;   |     
 | innodb_default_row_format                  |       -         | &#10003;     | &#10003;    |    
-| innodb_fast_ahi_cleanup_for_drop_table |     -        |      -              | &#10003;     |      
-| innodb_flush_redo_using_fdatasync     |       -         |      -              | &#10003;    |      
+| innodb_fast_ahi_cleanup_for_drop_table |     -        |      -             | &#10003;     |      
+| innodb_flush_redo_using_fdatasync     |       -         | &#10003;     | &#10003;    |      
 | innodb_page_cleaners                         |       -        | &#10003;     | &#10003;     |      
 | innodb_table_drop_mode                     |      -         |      -             | &#10003;     |      
 | innodb_temp_tablespace_fast_cleanup |       -        |       -            | &#10003;     |      
