--- a/product/大数据与AI/AI加速服务/词汇表.md
+++ b/product/大数据与AI/AI加速服务/词汇表.md
@@ -11,4 +11,4 @@
 在训练 AI 模型时使用的框架，主流框架包括 TensorFlow、PyTorch 等。
 
 ### 推理平台	
-在推理 AI 模型时使用的平台，主流的平台包括：ARM、X86、NVIDIA→ ARMv7、ARMv8、X86架构的 CPU，以及 Mali、Adreno、Apple、NV 的 GPU 以及 NPU 等。
+在推理 AI 模型时使用的平台，主流的平台包括：ARM、X86、NVIDIA 的 ARMv7、ARMv8、X86架构的 CPU，以及 Mali、Adreno、Apple、NV 的 GPU 以及 NPU 等。
