--- a/product/监控与管理/Prometheus 监控服务/Grafana 服务/操作指南/搜索实例.md
+++ b/product/监控与管理/Prometheus 监控服务/Grafana 服务/操作指南/搜索实例.md
@@ -9,4 +9,4 @@
    - 实例 ID：支持多个实例 ID 过滤，每个实例 ID 仅支持完全匹配过滤，支持直接输入实例 ID 来快速过滤。
    - 实例名称：不支持多个名称过滤，支持模糊匹配过滤。
    - 状态：支持用户多个状态选择过滤，同时也支持在列表头进行快速过滤。
-   - 标签：支持多个标签组合来过滤实例，同时也支持直接点击实例列表中对应的标签值来进行过滤。
+   - 标签：支持多个标签组合来过滤实例，同时也支持直接单击实例列表中对应的标签值来进行过滤。
