--- a/product/软件服务/TencentOSSever/常见问题.md
+++ b/product/软件服务/TencentOSSever/常见问题.md
@@ -1,6 +1,6 @@
 [](id:Q1)
 ### 什么是 TencentOS Server ？
-TencentOS Server（又名 Tencent Linux，简称 TS 或 tlinux）是腾讯针对云场景研发的 Linux 操作系统，提供特定的功能及性能优化，为云服务器实例中的应用程序提供高性能及更加安全可靠的运行环境。
+TencentOS Server 是腾讯针对云场景研发的 Linux 操作系统，提供特定的功能及性能优化，为云服务器实例中的应用程序提供高性能及更加安全可靠的运行环境。
 TencentOS Server 包含腾讯 OS 团队研发的 TencentOS 内核，基于云环境深度定制，将最新的 Linux 创新推向市场，为企业各类软件提供了超强性能、高可伸缩性和可靠性。TencentOS Server 提供免费使用，用户可持续获得腾讯 OS 团队的更新维护和技术支持。
 
 
