--- a/product/移动与通信/云开发低代码平台/购买指南/购买方式.md
+++ b/product/移动与通信/云开发低代码平台/购买指南/购买方式.md
@@ -37,11 +37,11 @@
 <th>资源类型</th>
 <th>资源细项</th>
 <th>体验资源包</th>
-<th>资源包 A</th>
-<th>资源包 B</th>
-<th>资源包 C</th>
-<th>资源包 D</th>
-<th>资源包 E</th>
+<th style = "width:12%">资源包 A</th>
+<th  style = "width:12%">资源包 B</th>
+<th  style = "width:12%">资源包 C</th>
+<th  style = "width:12%">资源包 D</th>
+<th  style = "width:12%">资源包 E</th>
 </tr>
 <tr>
 <td rowspan = "2">文件</td>
