--- a/product/安全服务/安全攻防对抗服务/产品简介/产品概述.md
+++ b/product/安全服务/安全攻防对抗服务/产品简介/产品概述.md
@@ -1,5 +1,5 @@
 ## 什么是安全攻防对抗服务？
-安全攻防对抗服务（Cybersecurity Attack-Defense Confrontation, CADC）基于腾讯安全专家能力及多年的攻防对抗经验构建。面向对安全能力有较高要求的企业用户，在用户授权后，通过实战模拟黑客攻击的手法，对企业信息化资产以及可能产生危害的安全风险进行测试。通过多维度、多视角的安全攻防对抗，动态检测企业安全防护的整体水位。
+安全攻防对抗服务（Cybersecurity Attack-Defense Confrontation, CADC）基于腾讯安全专家能力及多年的攻防对抗经验构建。面向对安全能力有较高要求的企业用户，在用户授权后，通过实战模拟 APT 攻击的手法，对企业信息化资产以及可能产生危害的安全风险进行测试。通过多维度、多视角的安全攻防对抗，动态检测企业安全防护的整体水位。
 
 ## 产品功能
 ### 发现企业安全短板
