--- a/product/安全服务/安全攻防对抗服务/产品简介/应用场景.md
+++ b/product/安全服务/安全攻防对抗服务/产品简介/应用场景.md
@@ -1,5 +1,5 @@
 ### 防护能力自检
-企业在信息化安全投入了大量的资源，需要通过模拟黑客攻击的方式进行全方位的测试，检测自身安全防护能力整体水位。
+企业在信息化安全投入了大量的资源，需要通过模拟 APT 攻击的方式进行全方位的测试，检测自身安全防护能力整体水位。
 
 ### 安全攻防演练
 企业在攻防演练前期，通过攻防模拟的方式确定企业安全能力是否存在短板、安全防护策略是否生效、是否存在安全盲区。
