--- a/product/互联网中间件/腾讯云微服务引擎/注册配置中心/Nacos 操作指南/01 引擎管理.md
+++ b/product/互联网中间件/腾讯云微服务引擎/注册配置中心/Nacos 操作指南/01 引擎管理.md
@@ -20,7 +20,7 @@
 </tr>
 <tr>
 <td>产品版本</td>
-<td>关于体验版，标准版的区别请参见 <a href="https://cloud.tencent.com/document/product/1364/70340">规格对比</a>。</td>
+<td>关于开发版，标准版的区别请参见 <a href="https://cloud.tencent.com/document/product/1364/70340">规格对比</a>。</td>
 </tr>
 <tr>
 <td><nobr>引擎所在地域</nobr></td>
