--- a/product/大数据与AI/万象优图2.0/API 文档/媒体处理/媒体截图接口/获取媒体文件截图.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/媒体处理/媒体截图接口/获取媒体文件截图.md
@@ -21,9 +21,9 @@ GetSnapshot 接口用于获取媒体文件某个时间的截图。
 
 此接口为同步模式，异步模式请参考[任务接口-截图任务](https://cloud.tencent.com/document/product/436/53996)
 
-## 请求
+## 请求示例
 
-#### 请求示例1
+#### 1、通过GET请求方式
 
 ```shell
 GET /for-test.mp4?ci-process=snapshot&time=1&format=jpg HTTP/1.1
@@ -34,7 +34,7 @@ Content-Length: <length>
 
 ```
 
-#### 请求示例2
+#### 2、通过直接输入地址+截图参数方式
 
 ```shell
 https://<BucketName-APPID>.cos.<Region>.myqcloud.com/for-test.mp4?ci-process=snapshot&time=1&format=jpg&<Auth String>
