--- a/product/大数据与AI/人脸识别/离线识别SDK/规格选型.md
+++ b/product/大数据与AI/人脸识别/离线识别SDK/规格选型.md
@@ -5,8 +5,8 @@ Android 版本支持：Android 4.0+ 
 最小可检测人脸大小：40px * 40px
 最小可识别人脸大小：80px * 80px
 可识别人脸角度：yaw ≤ ±30°，pitch ≤ ±30°  roll ≤ ±30° 
-检测速度：100ms 1080p* 
-追踪速度 10ms 1080p* 
+检测速度：100ms 1080p* 
+锁定速度 10ms 1080p* 
 RGB 图片特征抽取耗时：< 160ms（无负载）
 RGB 活体检测耗时：< 100ms（无负载）  
 红外活体检测耗时：< 50ms （无负载）
