--- a/product/安全服务/安全攻防对抗服务/快速入门.md
+++ b/product/安全服务/安全攻防对抗服务/快速入门.md
@@ -25,4 +25,4 @@
 
 
 ## 步骤7：服务验收
-在完成攻防对抗后，相关服务将自动终止，攻击队会梳理本次攻防对抗中涉及到的攻击面，并总结对抗成果以及安全加固建议，提供给用户。
+在完成攻防对抗后，相关服务将自动终止，攻击团队会梳理本次攻防对抗中涉及到的攻击面，并总结对抗成果以及安全加固建议，提供给用户。
